CI images update

--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-09 19:36:53
+lastsearch = 2024-08-09 22:42:42
 
 [tiki.vn]
 match = -138.9%%
 title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
-url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
+url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-cam-160-x-200-cm-p7695465.html
 
 [nemxinh.net]
 match = 50.0%%
@@ -72,9 +72,9 @@ title = Bộ Drap phủ ViVaBon SL102 (160x200) - draphoangcuong
 url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-vivabon-sl102-160x200-sp202129.html
 
 [antbedding.com]
-match = 33.3%%
-title = Bộ Chăn Ga Gối Eu07
-url = https://antbedding.com/bo-chan-ga-goi-eu07
+match = -33.3%%
+title = Bộ Chăn Ga Gối Modal Cotton MC13
+url = https://antbedding.com/bo-chan-ga-goi-modal-cotton-mc13
 
 [www.mym.com.vn]
 match = -57.1%%
@@ -94,7 +94,7 @@ url = https://edena.vn/
 [demviethome.vn]
 match = 16.7%%
 title = Bộ Phủ L'amour Living LV10
-url = https://demviethome.vn/bo-phu-lamour-living-lv10/?srsltid=AfmBOoquP_kzhNMTGuioX7Uzwum7Hc-cXm9OALXr9lovLvLgPwKjt3yi
+url = https://demviethome.vn/bo-phu-lamour-living-lv10/
 
 [leflair.com]
 match = -61.1%%
@@ -139,7 +139,7 @@ url = https://www.facebook.com/fitin.vn/
 [www.diepxuan.com]
 match = 27.8%%
 title = Bộ phủ màu 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-phu-mau-180x200.html?srsltid=AfmBOorlHV6grDJclP6y1FsamkSRSWsHlAPrUlq55x4v5pQcGqvScrRu
+url = https://www.diepxuan.com/bo-phu-mau-180x200.html
 
 [dovihome.vn]
 match = 6.7%%
