--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-08-09 21:55:43
+lastsearch = 2024-08-09 22:46:38
 
 [eva.vn]
 match = -163.2%%
@@ -359,7 +359,7 @@ url = https://www.qdnd.vn/quoc-phong-an-ninh/xay-dung-quan-doi/bong-hong-noi-tha
 [spacet.vn]
 match = -157.9%%
 title = Cây tùng bồng lai: Đặc điểm, ý nghĩa, công dụng và cách ...
-url = https://spacet.vn/blog/cham-soc-nha/cay-tung-bong-lai-dac-diem-y-nghia-cong-dung-va-cach-trong?srsltid=AfmBOootKTkhTGDqFXZnPyZ_7ZXYOj7x_Hi7o85EHP_Udl6I5Qo9_tlL
+url = https://spacet.vn/blog/cham-soc-nha/cay-tung-bong-lai-dac-diem-y-nghia-cong-dung-va-cach-trong
 
 [bnews.vn]
 match = -105.3%%
@@ -395,4 +395,9 @@ url = https://nguoihanoi.vn/bong-hoa-dep-cua-nganh-giao-duc-va-dao-tao-quan-hoan
 match = -21.1%%
 title = Nhà chờ xe bus “chờ” được quan tâm
 url = https://nhandan.vn/nha-cho-xe-bus-cho-duoc-quan-tam-post823469.html
+
+[www.hcmcpv.org.vn]
+match = -147.4%%
+title = Trao 44 suất học bổng Nguyễn Thị Minh Khai cho các em ...
+url = https://www.hcmcpv.org.vn/tin-tuc/trao-44-suat-hoc-bong-nguyen-thi-minh-khai-cho-cac-em-hoc-sinh-1491925999
 
