--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-08-09 21:47:03
+lastsearch = 2024-08-09 22:34:42
 
 [shopee.vn]
-match = -40.7%%
-title = Chiếu điều hòa mây lạnh cao cấp 2 lớp ( loại 1, có nhiều ...
-url = https://shopee.vn/Chiếu-điều-hòa-mây-lạnh-cao-cấp-2-lớp-(-loại-1-có-nhiều-loại-kích-thước)-không-kèm-vỏ-gối-i.17226131.25877940173
+match = 0.0%%
+title = chiếu điều hoà giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hoà
 
 [demxanh.com]
 match = 14.8%%
