--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-08-09 20:55:42
+lastsearch = 2024-08-09 22:44:44
 
 [tiki.vn]
 match = -47.6%%
@@ -12,9 +12,9 @@ title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu trúc đài loan
 
 [www.facebook.com]
-match = -57.1%%
-title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân ...
-url = https://www.facebook.com/photo.php?fbid=844924327674339&id=100064703379579&set=a.669666201866820
+match = -85.7%%
+title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
+url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
 
 [www.roc-taiwan.org]
 match = -42.9%%
@@ -89,7 +89,7 @@ url = https://nhandan.vn/dai-loan-trung-quoc-tiep-tuc-tim-kiem-18-nguoi-mat-tich
 [www.diepxuan.com]
 match = 19.0%%
 title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html?srsltid=AfmBOoqA522J66BF3MfYnExWLu8QUJwtWKNFvW9BA7LxgKHj7r5zOa5o
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html?srsltid=AfmBOooNf_E5PgnveaaYsgqmcw9pjoPEY2ctGVVmY5_D5TciQQcifZtR
 
 [znews.vn]
 match = -47.6%%
