--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-09 20:08:10
+lastsearch = 2024-08-09 22:45:53
 
 [burningman.org]
 match = -60.0%%
@@ -955,4 +955,14 @@ url = https://www.mncourts.gov/jurors.aspx
 match = -8.3%%
 title = Big Ten Plus
 url = https://www.bigtenplus.com/
+
+[www.morgan.edu]
+match = -206.7%%
+title = Morgan State University - Maryland's Preeminent Urban ...
+url = https://www.morgan.edu/
+
+[www.google.com]
+match = 0.0%%
+title = 
+url = https://www.google.com/search?sca_esv=fb4009a9e33de990&sca_upv=1&q=What+is+Morgan+State's+mascot?&sa=X&ved=2ahUKEwjl0PXOoOiHAxUElYkEHUSIGOQQsZYEegQIUBAC
 
