--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-08-09 21:47:13
+lastsearch = 2024-08-09 22:32:14
 
 [m.youtube.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -144.4%%
-title = NEM CHAY SỐT KEM HẠNH NHÂN siêu ngon các đồng chí ơi. ...
-url = https://www.instagram.com/p/C9mD02RvBka/
+match = -116.7%%
+title = LU EATING | MỘT GÓC NEM CHUA RÁN XINH XẺO GIỮA ...
+url = https://www.instagram.com/p/CltHti5L66x/
 
 [www.facebook.com]
 match = 22.2%%
@@ -32,9 +32,9 @@ title = Nem Nuong Que Huong Air Fryer
 url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
 
 [www.youtube.com]
-match = -144.4%%
-title = Chuẩn VỊ NEM NƯỚNG, Bí quyết làm Nem Nướng Viên dai ...
-url = https://www.youtube.com/watch?v=C58Hlp6UXfQ
+match = -122.2%%
+title = Bà Tân Vlog - Làm Mâm Bánh Đa Nem Siêu To Khổng Lồ
+url = https://www.youtube.com/watch?v=qlX0ZxCURE0
 
 [www.grab.com]
 match = -116.7%%
