--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-08-09 15:23:10
+lastsearch = 2024-08-09 22:44:06
 
 [www.tui.co.uk]
-match = -250.0%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = -41.7%%
+title = Find & Book Flights
+url = https://www.tui.co.uk/flight/
 
 [uk.trip.com]
 match = -233.3%%
@@ -162,9 +162,9 @@ title = Army Staff Sergeant Visala Tui
 url = https://www.buildinghomesforheroes.org/meet-our-heroes/army-staff-sergeant-visala-tui/
 
 [www.youtube.com]
-match = -175.0%%
-title = Korean Dham Doi (Tan Tui) Interpretation
-url = https://www.youtube.com/watch?v=9KjmM8FLEqE
+match = -166.7%%
+title = We Try A TUI Holiday - Are They Any Good?
+url = https://www.youtube.com/watch?v=qZBfXKzniEU
 
 [www.thenaturaladventure.com]
 match = -325.0%%
