--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -27,9 +27,9 @@ title = Bộ Drap Cotton Satin LS1512-N07
 url = http://lavendervn.com/bo-drap-cotton-satin-ls1512-n07
 
 [choixe.vn]
-match = -138.9%%
-title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
-url = https://choixe.vn/collections/giuong-160x200
+match = -144.4%%
+title = Bộ phòng ngủ Queen – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
+url = https://choixe.vn/collections/bo-phong-ngu-queen
 
 [nemkimtrang.com]
 match = -105.6%%
