--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -62,9 +62,9 @@ title = Ranliang Hu - Profile | Emory School of Medicine
 url = https://med.emory.edu/departments/radiology/profile/?u=RHU24
 
 [faculty.mdanderson.org]
-match = -17.6%%
-title = Philip L. Lorenzi, Ph.D.
-url = https://faculty.mdanderson.org/profiles/philip_lorenzi.html
+match = 0.0%%
+title = Hans Lee, MD
+url = https://faculty.mdanderson.org/profiles/hans_lee.html
 
 [pfas-1.itrcweb.org]
 match = -17.6%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Seeing the unseen of Chinese herbal medicine processing ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
+match = -211.8%%
+title = Ability to delay neuropathological events associated with ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2940273/
 
 [books.google.com]
 match = -217.6%%
