--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-08-09 21:34:39
+lastsearch = 2024-08-09 22:46:43
 
 [www.instagram.com]
-match = -238.5%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -30.8%%
+title = Yuki Chan (@yukichan_la)
+url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
 match = 23.1%%
@@ -87,9 +87,9 @@ title = CH.6 by Yuki Chan on Prezi
 url = https://prezi.com/audhwqir0lhx/ch6/
 
 [tel.directory.gov.hk]
-match = -46.2%%
-title = Civil Engineering Office
-url = https://tel.directory.gov.hk/0275013459_ENG.html
+match = -292.3%%
+title = Telephone Directory of the Government of the HKSAR And ...
+url = https://tel.directory.gov.hk/0242005094_ENG.html
 
 [www.straitstimes.com]
 match = -161.5%%
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -215.4%%
-title = Hoi Chan Translates Everyday Experiences into ...
+match = -300.0%%
+title = Hoi Chan Translates Everyday Experiences into ... - Colossal
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
