--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-09 21:34:18
+lastsearch = 2024-08-09 22:45:36
 
 [agasound.vn]
 match = 6.7%%
@@ -52,9 +52,9 @@ title = LineaBon D3K2 | Vitamin D3 K2 Tăng chiều cao hiệu quả cho ...
 url = https://www.lineabon.vn/product-page/lineabon-d3k2
 
 [www.diepxuan.com]
-match = 33.3%%
-title = Điệp Xuân Chiếu lác D2 12
-url = https://www.diepxuan.com/chieu-lac-d2-12.html?srsltid=AfmBOopDs9PsJ2jBqX_dodZdV_A_N83Wr2UAbZ6q7S1IAizI28y7VRrP
+match = 20.0%%
+title = Chiếu lác D2 12 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
 match = -186.7%%
@@ -370,4 +370,9 @@ url = https://tailieu247.vn/khoi-tu-nhien-thpt/tong-hop-chuyen-de-de-thi-thu-ly-
 match = -6.7%%
 title = GAP INC. FACTORY LIST
 url = https://www.ids.trade/files/gap_inc_factory_list.pdf
+
+[uspharma.vn]
+match = -8.3%%
+title = cadismectite
+url = https://uspharma.vn/tieu-hoa--gan-mat--tieu-duong/cadismectite/132-p136-646.aspx
 
