--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-09 22:28:49
+lastsearch = 2024-08-09 22:52:06
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -299,7 +299,7 @@ url = https://www.floridabar.org/the-florida-bar-journal/the-reinstatement-of-co
 [books.google.com]
 match = -217.6%%
 title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+14&source=bl&ots=2iloQvz_0E&sig=ACfU3U2hJI7FL48RDOj-ad_CLZ7fLE-Z1A&hl=en&sa=X&ved=2ahUKEwjyhL_mnOiHAxWUtokEHRMuCPEQ6AF6BAgcEAM
+url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+14&source=bl&ots=2iloQvA2-K&sig=ACfU3U1z7XNzU2ClDdgVJfvnIpoZ-Hp2nw&hl=en&sa=X&ved=2ahUKEwjU0siAouiHAxXuhYkEHYUlA5cQ6AF6BAgpEAM
 
 [www.house.gov]
 match = 11.8%%
