--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-09 17:54:32
+lastsearch = 2024-08-09 22:51:00
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -432,9 +432,9 @@ title =
 url = https://www.edsullivan.com/artists/edith-piaf/
 
 [www.jstor.org]
-match = -128.6%%
-title = 73merican Y3rt Nem of revenue usedL - ,A-rent expgnses, ...
-url = https://www.jstor.org/stable/pdf/25589213.pdf
+match = -76.2%%
+title = Pindar, "Nem." 5 - Nereids with Golden Distaffs
+url = https://www.jstor.org/stable/20538961
 
 [buckinghampalace.co.uk]
 match = 0.0%%
