--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-09 17:51:19
+lastsearch = 2024-08-09 22:57:26
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -72,8 +72,8 @@ title = TUI Cruises 10 April 2024
 url = https://www.cruisetimetables.com/tuicruises-10apr2024.html
 
 [www.lightology.com]
-match = -316.7%%
-title = Tui Pendant by David Trubridge | TUI-SMAL-BMB-WHI-KIT- ...
+match = -200.0%%
+title = Tui Pendant by David Trubridge - Lightology
 url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441
 
 [vitalimpacts.org]
@@ -107,8 +107,8 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -258.3%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / ...
 url = https://www.tui.co.uk/
 
 [maritime-executive.com]
