CI images update

--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-09 16:37:40
+lastsearch = 2024-08-09 23:31:50
 
 [demxanh.com]
 match = 37.0%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOor64tA-NC3wnJP9fOV1AW8HTDTRKlJij0BkHY3H7XTKoOxm6Sdz
+url = https://demxanh.com/chieu-truc-den.html
 
 [demre.com.vn]
-match = 70.4%%
-title = chiếu trúc hạt đen-trắng 160x200
-url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-3
+match = 66.7%%
+title = chiếu trúc hạt đen- trắng 160x200
+url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-1
 
 [sieuthitretho.vn]
 match = 3.7%%
@@ -42,9 +42,9 @@ title = BẢNG GIÁ Chiếu Trúc Việt Nam mới ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [www.diepxuan.com]
-match = 63.0%%
-title = Điệp Xuân Chiếu trúc Thái đen 160x200
-url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html?srsltid=AfmBOoprrRv7QFyEVrPtp-IM1lOyotH8yiCPWsXbKImsFM098ILWpio7
+match = 11.1%%
+title = Điệp Xuân Chiếu trúc trung quốc
+url = https://www.diepxuan.com/chieu-truc/chieu-truc-trung-quoc.html
 
 [shopee.vn]
 match = -18.5%%
