--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-09 22:42:42
+lastsearch = 2024-08-09 23:18:04
 
 [tiki.vn]
 match = -138.9%%
 title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
-url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-cam-160-x-200-cm-p7695465.html
+url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
 
 [nemxinh.net]
 match = 50.0%%
@@ -27,9 +27,9 @@ title = Bộ Drap Cotton Satin LS1512-N07
 url = http://lavendervn.com/bo-drap-cotton-satin-ls1512-n07
 
 [choixe.vn]
-match = -144.4%%
-title = Bộ phòng ngủ Queen – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
-url = https://choixe.vn/collections/bo-phong-ngu-queen
+match = -138.9%%
+title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
+url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
 match = -105.6%%
@@ -102,8 +102,8 @@ title = Bộ Drap & Vỏ Chăn Cotton 160x200 (5 Món)...
 url = https://leflair.com/en/shop/delete-bo-drap-vo-chan-cotton-160x200-5-mon-3285
 
 [ninhouse.vn]
-match = -161.1%%
-title = [DRAP LỤA NỆM] Chăn ga gối đệm NIN Tencel TC800 mát ...
+match = -138.9%%
+title = [DRAP LỤA NỆM] Chăn ga gối đệm NIN Tencel TC800 ...
 url = https://ninhouse.vn/collections/nin-tencel-800
 
 [elmichsleep.vn]
