--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-08-09 22:29:55
+lastsearch = 2024-08-09 23:31:29
 
 [zhangbrickshop.com]
 match = -133.3
@@ -134,7 +134,7 @@ url = https://katinat.vn/cua-hang-2/
 [bibomart.com.vn]
 match = -13.3%%
 title = BioAmicus Vitamin D3K2
-url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html?srsltid=AfmBOoolXDn_ksrwJ1xx6w_calrdW3ulXlkcs_EH-V9Hi0LIH35mM9x4
+url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html
 
 [www.nhathuocankhang.com]
 match = -220.0%%
