--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-09 22:35:24
+lastsearch = 2024-08-09 23:32:52
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -17,9 +17,9 @@ title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [shopee.vn]
-match = -12.9%%
-title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc/1m2
+match = 48.4%%
+title = Chiếu trúc Quế Lâm - hàng chuẩn loại 1
+url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-hàng-chuẩn-loại-1-i.20551076.970075626
 
 [tiki.vn]
 match = -19.4%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 7, 2024
 url = https://tiki.vn/search?q=chiếu trúc hạt
 
 [demxanh.com]
-match = -9.7%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -3.2%%
+title = Chuyên cung cấp chiếu trúc hạt các hãng hàng ...
+url = https://demxanh.com/chieu-truc-hat.html
 
 [www.sendo.vn]
 match = 54.8%%
