--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-08-09 22:18:42
+lastsearch = 2024-08-09 23:26:52
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -22,8 +22,8 @@ title = vỏ chăn thắng lợi giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=vỏ chăn thắng lợi
 
 [congtynemthangloi.com]
-match = -52.0%%
-title = Review TOP ga giường Thắng Lợi được yêu thích nhất ...
+match = -72.0%%
+title = Review TOP ga giường Thắng Lợi được yêu thích nhất hiện nay
 url = https://congtynemthangloi.com/review-ga-giuong-thang-loi
 
 [nemtotgiare.com]
@@ -49,7 +49,7 @@ url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html?srsltid=
 [www.lazada.vn]
 match = 0.0%%
 title = TXVhIELhu5kgZ2EgZ2nGsOG7n...
-url = https://www.lazada.vn/ga-giuong/th-ng-l-i/
+url = https://www.lazada.vn/ga-giuong/th-ng-l-i/?srsltid=AfmBOoq7bbA4GuAWK1dJWV1r1a88a7TIuAn7lvfpe4Ksu8LPEltX63VY
 
 [nemcaosuthangloi.vn]
 match = 4.0%%
