--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-09 17:19:04
+lastsearch = 2024-08-09 23:27:13
 
 [us.misumi-ec.com]
 match = -350.0%%
 title = GA16-16-6 | Enclosures - ABS Box, Water/Dust Proof, GA Series
-url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6
+url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6&srsltid=AfmBOorOUn2urc28l8w72irHCepM3S5lGmMBW3j4XSxkeQCgWepHO5Bx
 
 [www.amazon.com]
 match = -91.7%%
