--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-08-09 20:56:47
+lastsearch = 2024-08-09 23:27:32
 
 [www.amazon.com]
 match = -309.1%%
@@ -102,9 +102,9 @@ title = BÀN GHẾ ĐÁ THỦ ĐỨC – GIAO HÀNG MIỄN PHÍ TẬN NƠI
 url = https://ghedatruongan.com/ban-ghe-da-thu-duc/
 
 [www.lazada.vn]
-match = -136.4%%
-title = Thảm Lót Ghế Sofa Da Giá Tốt T08/2024
-url = https://www.lazada.vn/tag/tham-lot-ghe-sofa-da/
+match = -290.9%%
+title = Đệm Lót Ghế Da Chống Bẩn Chống Thấm Nước Dày Dặn ...
+url = https://www.lazada.vn/products/dem-lot-ghe-da-chong-ban-chong-tham-nuoc-day-dan-dem-lot-ghe-ban-an-dem-ghe-chong-truot-hinh-mong-ngua-van-phong-ngoi-lau-i2424774730.html
 
 [richhome.vn]
 match = -190.9%%
