--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-09 22:46:59
+lastsearch = 2024-08-09 23:29:43
 
 [www.diepxuan.com]
-match = 27.3%%
-title = Thảm giường Bode 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-140x190.html
+match = 40.9%%
+title = Thảm giường nỉ 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [tiki.vn]
 match = -36.4%%
