CI images update

--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -142,9 +142,9 @@ title = Camping Tent
 url = https://www.roadtripamerica.com/forum/showthread.php?48059-Camping-Tent
 
 [kllibrary.dbkl.gov.my]
-match = -68.8%%
-title = Search Results for Dreams -- Fiction
-url = http://kllibrary.dbkl.gov.my/client/en_US/pkl/search/detailnonmodal.detail.mainpanel.fielddisplay.linktonewsearch?qu=Dreams+--+Fiction&ps=300
+match = -125.0%%
+title = Search Results for Children Chinese Fiction
+url = http://kllibrary.dbkl.gov.my/client/en_US/pkl/search/results.displaypanel.resultstoolbar.pagination.selectpage:handlepagingviasearchsession/1?qu=Children+Chinese+Fiction&pe=r:1&ic=true&ps=300
 
 [www.lemon8-app.com]
 match = -118.8%%
