--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -217,9 +217,9 @@ title = ĐẠI LÝ GIAO NƯỚC TẬN NHÀ QUẬN BÌNH THẠNH, LAVIE ...
 url = https://iwater.vn/tin-thi-truong/iwater-dai-ly-giao-nuoc-tan-nha-khach-hang-thuoc-du-an-la-bonita-so-6-8-duong-d2-phuong-15-quan-binh-thanh-tphcm-13453.html
 
 [www.mucvu-borsum.de]
-match = -160.0%%
-title = Thánh Lễ 2024 tại CĐ Th. Giuse Khang - Hamburg
-url = http://www.mucvu-borsum.de/?muc=a&g1=204&ba=1&b1=28&b2=0&b3=14&ca=1&c1=91&c2=0&c3=0&da=1&d1=0&d2=0&d3=0
+match = -93.3%%
+title = Thánh Lễ 2024 tại CĐ Th. Giuse Khang
+url = http://www.mucvu-borsum.de/?muc=18&g1=252&ba=2&b1=0&b2=329&b3=35&ca=3&c1=14&c2=0&c3=0&da=1&d1=0&d2=0&d3=0
 
 [www.tiktok.com]
 match = -20.0%%
