--- a/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x400.html
 lastopen = 2024-06-07 00:22:51
 
 [search]
-lastsearch = 2024-08-09 18:30:17
+lastsearch = 2024-08-09 23:55:56
 
 [www.diepxuan.com]
-match = 24.2%%
-title = Chiếu gấp Thái Bình 180x400 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-thai-binh-180x400.html
+match = 42.4%%
+title = Điệp Xuân Chiếu nhựa Hà Nội 180x300
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-180x300.html
 
 [shopee.vn]
 match = 9.1%%
