--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-09 16:16:58
+lastsearch = 2024-08-09 23:48:09
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -32,14 +32,14 @@ title = Svara
 url = https://en.wikipedia.org/wiki/Svara
 
 [www.facebook.com]
-match = -84.6%%
-title = 3:16 Healthcare | Bremen GA
-url = https://www.facebook.com/316Healthcare/
+match = -61.5%%
+title = Northwest Georgia Scanner
+url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
-match = -123.1%%
-title = P1 EFREN 'BATA' REYES VS GANI RACE 16
-url = https://www.youtube.com/watch?v=COSPiMrycWA
+match = -238.5%%
+title = Gani Lawal Posts 14 Points, 14 Rebounds vs. Sky Force
+url = https://www.youtube.com/watch?v=tJOSML4nQWo
 
 [www.regmovies.com]
 match = -215.4%%
@@ -118,8 +118,8 @@ url = https://ww2.arb.ca.gov/our-work/programs/advanced-clean-cars-program/state
 
 [www.deutschconnectorstore.com]
 match = -200.0%%
-title = Deutsch 0462-005-20141 Size 20 Contact 18-16 Ga
-url = https://www.deutschconnectorstore.com/p-701-deutsch-0462-005-20141-contact-18-16-ga.html
+title = Deutsch 0460-010-20141 Size 20 Contact 18-16 Ga
+url = https://www.deutschconnectorstore.com/p-700-deutsch-0460-010-20141-contact-18-16-ga.html
 
 [www.saflii.org]
 match = -200.0%%
@@ -234,7 +234,7 @@ url = https://www.ipassio.com/blog/list-of-ragas-in-indian-classical-music
 [www.partstown.com]
 match = -215.4%%
 title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
-url = https://www.partstown.com/henny-penny/henec05-001
+url = https://www.partstown.com/henny-penny/henec05-001?srsltid=AfmBOoqFHtFAec9K8qfw87UEwF_5MMnjjhI3pLj5V4dnqmOxCGDqf9nx
 
 [pubs.acs.org]
 match = -330.8%%
@@ -253,8 +253,8 @@ url = https://www.denverpost.com/author/georgia-nicols/
 
 [www.prowireusa.com]
 match = -200.0%%
-title = Deutsch 0460-010-20141 Size 20 Contact 18-16 Ga
-url = https://www.prowireusa.com/p-700-deutsch-0460-010-20141-contact-18-16-ga.html
+title = Deutsch 0462-005-20141 Size 20 Contact 18-16 Ga
+url = https://www.prowireusa.com/p-701-deutsch-0462-005-20141-contact-18-16-ga.html
 
 [www.icc-cpi.int]
 match = -92.3%%
@@ -725,4 +725,9 @@ url = https://www.nbcnews.com/news/weather/live-blog/hurricane-debby-live-update
 match = -253.8%%
 title = U.S. Fleet Cyber Command / Commander, U.S. 10th Fleet
 url = https://www.fcc.navy.mil/
+
+[www.aliexpress.com]
+match = -192.3%%
+title = [SA]CANAL rocker power switch Gani long flat ...
+url = https://www.aliexpress.com/i/32471733900.html
 
