--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -32,9 +32,9 @@ title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
 url = https://www.mantubung.com/
 
 [www.lazada.vn]
-match = -242.9%%
-title = màn tự bung hàng cao cấp, nhiều kích thước, gấp gọn tiện ...
-url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-man-tu-bung-hang-cao-cap-nhieu-kich-thuoc-gap-gon-tien-dung-chong-muoi-hieu-qua-i1531214550.html
+match = -164.3%%
+title = Màn Ngủ Chụp Tự Bung METTA - Size 1M6x2M- BH 18 ...
+url = https://www.lazada.vn/products/man-ngu-chup-tu-bung-metta-size-1m6x2m-bh-18-thang-hang-chinh-hang-viet-nam-xuat-khau-i294344727.html
 
 [www.mungbaobao.com]
 match = -214.3%%
