--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-08-09 08:14:56
+lastsearch = 2024-08-09 23:54:08
 
 [www.everonvn.vn]
 match = -38.7%%
@@ -62,9 +62,9 @@ title = Nệm bông ép gấp 3 Padding Everon
 url = https://khonemtonghop.com/nem-bong-ep-gap-3-padding-everon/
 
 [thegioinem.com]
-match = 0.0%%
-title = Chăn Ga Gối Everon EPC23045
-url = https://thegioinem.com/chan-ga-goi-everon-epc23045.html
+match = -4.3%%
+title = Chăn Ga Everon EPM24068
+url = https://thegioinem.com/chan-ga-everon-epm24068.html
 
 [tongdailyeveron.com.vn]
 match = 0.0%%
