--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-08-09 20:08:50
+lastsearch = 2024-08-09 23:49:55
 
 [suongtuyet.com]
 match = -4.0%%
@@ -17,9 +17,9 @@ title = Đệm bông ép 3 mảnh Korea Gấm
 url = https://tuananh.vn/dem-bong-ep-korea-gam--p110.html
 
 [demxanh.com]
-match = -72.0%%
-title = Đệm bông ép Tuấn Anh chính hãng giá tốt nhất thị trường!
-url = https://demxanh.com/dem-bong-ep-tuan-anh.html?srsltid=AfmBOop2fQ57xQPxp7jVdDS7c4m-hKphyyBeAKZBNGP2w4ux08GC7tyu
+match = -12.0%%
+title = Đệm bông ép Tuấn Anh Korea Cotton chính hãng
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-kaki.html
 
 [shopee.vn]
 match = -40.0%%
