--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-09 23:19:27
+lastsearch = 2024-08-09 23:53:47
 
 [ninhouse.vn]
 match = -146.2%%
 title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOor3xNnUtHmVQTWA18mu5F77jH2KxnZx1jQG8aoOzWeTOjnzJewl
+url = https://ninhouse.vn/collections/vo-goi-nam
 
 [www.lamido.vn]
 match = 46.2%%
@@ -109,7 +109,7 @@ url = https://elambo.vn/vo-goi-35x50-cm/
 [jysk.vn]
 match = -238.5%%
 title = Vỏ Gối Nằm, Gối Ôm Bền Đẹp, Hiện Đại, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi?srsltid=AfmBOorbJB2XrrlLvPOMXISq9mzatCbMnkT5qbvJl0sIwrOiGyDXYT05
+url = https://jysk.vn/vo-goi
 
 [www.everonvn.vn]
 match = 15.4%%
