--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-08-09 22:57:45
+lastsearch = 2024-08-10 00:16:43
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -29,7 +29,7 @@ url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-solid-84/
 [demxanh.com]
 match = 0.0%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html?srsltid=AfmBOopDFRV1f6digil1KQhIQZPlIDeUGdfMSzcash1OatpfcYQJmHxw
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html
 
 [thegioinem.com]
 match = 17.9%%
