--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-08-09 22:46:43
+lastsearch = 2024-08-10 00:17:47
 
 [www.instagram.com]
-match = -30.8%%
-title = Yuki Chan (@yukichan_la)
-url = https://www.instagram.com/yukichan_la/?hl=en
+match = -107.7%%
+title = Hoi Chan (@hoichandraws) - Instagram
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.linkedin.com]
 match = 23.1%%
@@ -187,9 +187,9 @@ title = yuki-bushido User Profile
 url = https://www.deviantart.com/yuki-bushido/favourites/62985112/stuff-of-my-characters?page=6
 
 [www.tiktok.com]
-match = -215.4%%
-title = #duet with @Steven Chan Hoi Sing Yassss! 💃🏾🕺🏻#dance ...
-url = https://www.tiktok.com/@catbrows/video/7371964108607900958
+match = -300.0%%
+title = #dance #zumba #zumbainstructor #bouyon #fitness #workout ...
+url = https://www.tiktok.com/@stevenchanhs/video/7399716781377588512
 
 [sg.linkedin.com]
 match = -261.5%%
