--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-08-09 22:36:47
+lastsearch = 2024-08-10 00:14:38
 
 [chieutruc.info]
 match = -63.6%%
@@ -24,7 +24,7 @@ url = https://m.facebook.com/groups/400243538122762/posts/989653909181719/
 [nhathuoclongchau.com.vn]
 match = -104.5%%
 title = Mang thai 18 tuần nặng bao nhiêu cân để bé phát triển tốt?
-url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html
+url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html?srsltid=AfmBOooihrrljsqIjObJy3XjVXYSuA4-xF79F4CP-TVHQNi0o_SgRt2E
 
 [www.vinmec.com]
 match = 4.5%%
@@ -37,9 +37,9 @@ title = 🔴 Trực Tiếp | U18 Việt Nam - U18 Thái Lan | Việt Nam Khẳng
 url = https://www.youtube.com/watch?v=uPDPr__M7aI
 
 [www.facebook.com]
-match = 45.5%%
-title = Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
+match = 40.9%%
+title = Chiếu Cói Cao Cấp Nga Sơn
+url = https://www.facebook.com/chieucoiviettrang/
 
 [medlatec.vn]
 match = -109.1%%
@@ -174,7 +174,7 @@ url = https://ababy.com.vn/chieu-coi-100x60cm-p429.html
 [demxanh.com]
 match = -31.8%%
 title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
-url = https://demxanh.com/bang-gia-chieu-truc-2018.html
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html?srsltid=AfmBOoolfYpxspECazkcANsm6HfKPSgB3oWiR832dFLOteSSTf7dVfRX
 
 [tamanhhospital.vn]
 match = -104.5%%
