--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-08-09 18:36:29
+lastsearch = 2024-08-10 00:18:49
 
 [shopee.vn]
-match = 14.3%%
-title = Chiếu Điều Hòa Lụa Tơ Tằm Nhập Khẩu Cao Cấp ...
-url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Tơ-Tằm-Nhập-Khẩu-Cao-Cấp-Chiếu-Có-Lót-Thông-Hơi-Mát-Lạnh-Mùa-Hè-i.294575973.17493425546
+match = -25.0%%
+title = Chiếu mây điều hòa lót lụa cao cấp có chun bo góc giúp cố ...
+url = https://shopee.vn/Chiếu-mây-điều-hòa-lót-lụa-cao-cấp-có-chun-bo-góc-giúp-cố-định-chiếu-Chiếu-điều-hoà-sợi-mây-viền-lụa-thoáng-khí-tốt-i.472596491.13662110393
 
 [chieutrelanlan.com]
 match = 19.0%%
@@ -24,17 +24,17 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = 21.4%%
 title = Sử dụng chiếu điều hòa có tốt hay không?
-url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html?srsltid=AfmBOorKrFYX4Xs_m-U7GLsfh4HLWRRDshEzN82Y3OY1_-_2R6RYfzQv
 
 [tiki.vn]
-match = 10.7%%
-title = Chiếu lụa điều hòa hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu lụa điều hòa
+match = 28.6%%
+title = Chiếu điều hòa có mát không? Review 10 ...
+url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [sieuthidem.vn]
 match = 32.1%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOooV8J4cqJsJLHHrp0v7kPyZwQ0QwH-E0rpx_VXgkpr22oe3Z5Og
 
 [kyoryo.vn]
 match = -35.7%%
@@ -99,7 +99,7 @@ url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 [vtvhyundai.vn]
 match = -14.3%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOoq8NDd5vrU-CfmU3hJcMT428mBcjnCxikU87fo-Glo8II0S4Cvn
 
 [noithattana.vn]
 match = 21.4%%
