--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-09 22:45:36
+lastsearch = 2024-08-10 00:13:36
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -213.3%%
-title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
+match = -106.7%%
+title = Busan Korean Food | Ho Chi Minh City
+url = https://www.facebook.com/Busan.Korean.Food/?locale=vi_VN
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -57,9 +57,9 @@ title = Chiếu lác D2 12 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
-match = -186.7%%
-title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
-url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
+match = -200.0%%
+title = [CHÍNH HÃNG] LineaBon – Vitamin tăng chiều cao D2 K3 ...
+url = https://shopee.vn/-CHÍNH-HÃNG-LineaBon-–-Vitamin-tăng-chiều-cao-D2-K3-đầu-tiên-từ-Châu-Âu-i.365676746.2966330385
 
 [mngiaquat.longbien.edu.vn]
 match = -213.3%%
