--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-09 21:43:06
+lastsearch = 2024-08-10 00:22:00
 
 [www.diepxuan.com]
 match = 42.9%%
 title = Chiếu trúc thai đen14 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-thai-den14.html?srsltid=AfmBOooQrk8NkhMMD8RfgVVYuhNDRUkAEzhN-TA-pG8lfJDctPNZuRgM
+url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
 match = -28.6%%
@@ -19,7 +19,7 @@ url = https://demxanh.com/chieu-truc-hat-huong-truc.html
 [www.lazada.vn]
 match = -81.0%%
 title = Chiếu Trúc Thái Lan Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOooeTkIYtPp-z6Ydn4y_0rQFPobnwkWHdxcudt6BmxctpXh6pvIW
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
 
 [tiki.vn]
 match = -42.9%%
@@ -532,9 +532,9 @@ title = Giá vàng: Trang chủ
 url = https://giavang.pnj.com.vn/
 
 [hanoionline.vn]
-match = 14.3%%
-title = Ai dọn 'rác trời' vô chủ?
-url = https://hanoionline.vn/video/ai-don-rac-troi-vo-chu-257453.htm
+match = -100.0%%
+title = Trình Chính phủ giải pháp ứng phó với ùn tắc đăng kiểm
+url = https://hanoionline.vn/video/trinh-chinh-phu-giai-phap-ung-pho-voi-un-tac-dang-kiem-257475.htm
 
 [laodong.vn]
 match = -109.5%%
@@ -657,9 +657,9 @@ title = Nhiều người thương vong do sạt lở đá tại các tỉnh
 url = https://moitruong.net.vn/nhieu-nguoi-thuong-vong-do-sat-lo-da-tai-cac-tinh-76080.html
 
 [doanhnhansaigon.vn]
-match = -119.0%%
-title = Thành phố Thủ Đức thành lập Hội Golf, tổ chức giải đấu ...
-url = https://doanhnhansaigon.vn/thanh-pho-thu-duc-thanh-lap-hoi-golf-to-chuc-giai-dau-gay-quy-vi-nguoi-ngheo-312659.html
+match = -128.6%%
+title = Năm 2024, 86 doanh nhân trẻ khởi nghiệp xuất sắc được ...
+url = https://doanhnhansaigon.vn/nam-2024-86-doanh-nhan-tre-khoi-nghiep-xuat-sac-duoc-vinh-danh-312660.html
 
 [vi.wikipedia.org]
 match = -33.3%%
@@ -720,4 +720,9 @@ url = https://congan.laichau.gov.vn/index.php/hoat-dong-cua-ca-lai-chau/sin-ho-k
 match = -142.9%%
 title = Ý đồ của Putin khi phái Shoigu sang Iran. F-16 Ukraine có ...
 url = https://vietcatholic.net/News/html/291140.htm
+
+[baodanang.vn]
+match = -81.0%%
+title = Người dân, hộ kinh doanh đồng tình, hưởng ứng
+url = https://baodanang.vn/xa-hoi/202404/thi-diem-phan-luong-giao-thong-mot-chieu-xung-quanh-cho-han-nguoi-dan-ho-kinh-doanh-dong-tinh-huong-ung-3969182/
 
