--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-09 20:35:22
+lastsearch = 2024-08-10 00:15:20
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -15.0%%
-title = Abraham Palmer - UCSD Profiles
-url = https://profiles.ucsd.edu/abraham.palmer
+match = 5.9%%
+title = Michael Rosenfeld
+url = https://profiles.ucsd.edu/michael.rosenfeld
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,14 +52,14 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = -6.2%%
-title = Spencer Behr, MD
-url = https://profiles.ucsf.edu/spencer.behr
+match = -5.0%%
+title = Christopher Dvorak, MD
+url = https://profiles.ucsf.edu/christopher.dvorak
 
 [www.ncbi.nlm.nih.gov]
-match = -165.0%%
-title = End binding-3 inhibitor activates regenerative program in ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10591057/
+match = -130.0%%
+title = Exercise in patients with inflammatory bowel diseases
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
 
 [profiles.ucla.edu]
 match = -41.7%%
@@ -87,9 +87,9 @@ title = Electrical Transport Mechanisms of ITO/a-Si:H Schottky Diode
 url = https://uwaterloo.ca/giga-to-nanoelectronics-centre/sites/default/files/uploads/documents/annual_report_2002-2005.pdf
 
 [som.cuanschutz.edu]
-match = -170.0%%
-title = Kurt Stenmark, MD Professor, Pediatrics-Critical Care Medicine
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/15570
+match = -150.0%%
+title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
 
 [www.dir.ca.gov]
 match = -28.6%%
