CI images update

--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-08-09 17:41:54
+lastsearch = 2024-08-10 00:32:40
 
 [shopee.vn]
 match = -28.0%%
@@ -47,9 +47,9 @@ title = Các đối sách lớn của Đài Loan trong những năm tiếp theo
 url = https://nghiencuuchienluoc.org/cac-doi-sach-lon-cua-dai-loan-trong-nhung-nam-tiep-theo/
 
 [books.google.com]
-match = -60.0%%
-title = Tù nhân Nhà nước: Hồi ký bí mật của Triệu Tử Dương
-url = https://books.google.com/books?id=r2fDEAAAQBAJ&pg=PT142&lpg=PT142&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=NCRctb5fWS&sig=ACfU3U28w2RmXxE4IaKIOghpjE7b9DPPeg&hl=en&sa=X&ved=2ahUKEwitpr7Vo-WHAxWmFlkFHcKZOP0Q6AF6BAg4EAM
+match = -80.0%%
+title = Từ điẻ̂n địa chí Bạc Liêu - Page 737 - Google Books Result
+url = https://books.google.com/books?id=GdKw75bQHZUC&pg=PA737&lpg=PA737&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=hUKgj96v-T&sig=ACfU3U2X-m1PTlkuvQ4qQKBEx1oHyqWTHQ&hl=en&sa=X&ved=2ahUKEwii9uW9uOiHAxVbEFkFHYbtEgsQ6AF6BAg5EAM
 
 [cellphones.com.vn]
 match = -52.0%%
