--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-09 22:24:13
+lastsearch = 2024-08-10 00:34:28
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -206.2%%
-title = Trận chiến vì danh dự - GAM vs TS | Bán Kết Nhánh Thắng 1 ...
-url = https://m.facebook.com/vcslmht/videos/trận-chiến-vì-danh-dự-gam-vs-ts-bán-kết-nhánh-thắng-1-vcs-2024-mùa-hè/892848602698546/
+match = -250.0%%
+title = Biến số khó lường - VKE vs TW | Bán kết Nhánh thắng 2 | VCS ...
+url = https://m.facebook.com/vcslmht/videos/biến-số-khó-lường-vke-vs-tw-bán-kết-nhánh-thắng-2-vcs-2024-mùa-hè/1054898946051993/
 
 [www.sjcallahabad.org]
 match = -212.5%%
