--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-09 23:44:07
+lastsearch = 2024-08-10 00:40:02
 
 [hanvico.com.vn]
-match = 28.6%%
-title = Bộ ga chun LIVING - LV45
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv45/
+match = 50.0%%
+title = Bộ ga chun chần KS11
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-chan-ks11/
 
 [www.diepxuan.com]
 match = -4.8%%
