--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-08-09 17:35:01
+lastsearch = 2024-08-10 00:41:47
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -117,9 +117,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [congnghehoangtien.com]
-match = -160.0%%
-title = Đèn năng lượng mặt trời chiếu sáng 24 LED HT-SL23
-url = https://congnghehoangtien.com/san-pham/den-nang-luong-mat-troi-chieu-sang-24-led-ht-sl23/
+match = -133.3%%
+title = Đèn Led Năng Lượng Mặt Trời Sân Vườn HT-SL10
+url = https://congnghehoangtien.com/san-pham/den-led-nang-luong-mat-troi-san-vuon-ht-sl10/
 
 [www.otosaigon.com]
 match = -86.7%%
