--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-09 23:57:34
+lastsearch = 2024-08-10 00:43:30
 
 [scholar.google.com]
 match = -43.8%%
@@ -47,9 +47,9 @@ title = Khám phá làng nghề làm chiếu Long Cang truyền thống
 url = https://laodongtre.laodong.vn/doi-song/kham-pha-lang-nghe-lam-chieu-long-cang-truyen-thong-1277659.ldo
 
 [www.vinmec.com]
-match = -75.0%%
-title = Chiều cao, cân nặng bé gái 18 tháng tuổi
-url = https://www.vinmec.com/vie/bai-viet/chieu-cao-can-nang-be-gai-18-thang-tuoi-vi
+match = -81.2%%
+title = Chiều cao, cân nặng bé trai 18 tháng tuổi
+url = https://www.vinmec.com/vie/bai-viet/chieu-cao-can-nang-be-trai-18-thang-tuoi-vi
 
 [www.bachhoaxanh.com]
 match = -218.8%%
@@ -112,9 +112,9 @@ title = Giá vàng 9999 hôm nay tại 64 tỉnh 4/8/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -181.2%%
-title = 18 BƯỚC 💥 Modern Tacking CỰC ĐẸP // CÓ HƯỚNG DẪN Ở ...
-url = https://www.youtube.com/watch?v=PWk3nmCXI0k
+match = -225.0%%
+title = 18 phút tập lắc vòng giảm eo,giảm mỡ bụng nhanh trong một ...
+url = https://www.youtube.com/watch?v=Z9nt7fzWvqI
 
 [books.google.com]
 match = -156.2%%
@@ -865,4 +865,9 @@ url = https://stockbiz.vn/tin-tuc/den-luc-tien-se-sot-ruot/27527737
 match = -181.2%%
 title = Cơ quan thi hành án huyện Châu Thành triển khai kế ...
 url = https://thanhtra.com.vn/phap-luat/hoan-thien-the-che/co-quan-thi-hanh-an-huyen-chau-thanh-trien-khai-ke-hoach-cuong-che-thi-hanh-an-dan-su-229175.html
+
+[www.quangninh.gov.vn]
+match = -50.0%%
+title = Vị trí, địa lý phường Mạo Khê
+url = https://www.quangninh.gov.vn/donvi/phuongmaokhe/Trang/ChiTietTinTuc.aspx?nid=90
 
