--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-08-09 23:39:34
+lastsearch = 2024-08-10 00:45:37
 
 [thegioidemviet.vn]
 match = 32.1%%
@@ -24,7 +24,7 @@ url = https://chieutrelanlan.com/chieu-truc-p17.html
 [demxanh.com]
 match = -28.6%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoqaVvXRoaMSulrKeUxr-tjIHxCm_IBT8QUsuEtCql_plieA7YNY
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,14 +37,14 @@ title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 7, 2024
 url = https://tiki.vn/search?q=chiếu trúc hạt
 
 [www.sendo.vn]
-match = -28.6%%
-title = Chiếu Trúc 1M Siêu Chất, Giá Ưu Đãi, Khuyến Mãi Hấp Dẫn
-url = https://www.sendo.vn/chieu-truc-1m.htm
+match = -17.9%%
+title = Chiếu trúc Quế Lâm loại 1 cao cấp ( loại có 2 mắt ngọc) ...
+url = https://www.sendo.vn/anh-that-100-chieu-truc-que-lam-loai-1-cao-cap-loai-co-2-mat-ngoc-duo-c-kie-m-ha-ng-42210887-117572298.html
 
 [www.lazada.vn]
 match = 3.6%%
 title = Chiếu trúc hạt Quế Lâm loại 1, chiếu điều hoà cao cấp
-url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-loai-1-chieu-dieu-hoa-cao-cap-i1845950408.html
+url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-loai-1-chieu-dieu-hoa-cao-cap-i1845950408.html?srsltid=AfmBOooEx3BB5fs0lUK2-Ts4KUUaBFST-95akK7-kKnz725-pNxmtOIT
 
 [thegioidemonline.com]
 match = -39.3%%
