--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-09 23:25:49
+lastsearch = 2024-08-10 00:29:55
 
 [shopee.vn]
-match = 40.0%%
-title = Màn chụp tự bung BẢO AN đỉnh vuông ...
-url = https://shopee.vn/Màn-Chụp-Bảo-An-❤️-𝙁𝙍𝙀𝙀-𝙎𝙃𝙄𝙋-❤️-Màn-Chụp-Đỉnh-Vuông-Cao-Cấp-1-Cửa-Mùng-Chụp-Tự-Bung-Đỉnh-Rộng-Khung-Thép-Chắc-Chắn-i.1143757370.22163185600
+match = -8.0%%
+title = Màn chụp Tự Bung Đỉnh Vuông Cao Cấp Hoàng Nhân ...
+url = https://shopee.vn/Màn-chụp-Tự-Bung-Đỉnh-Vuông-Cao-Cấp-Hoàng-Nhân-Màn-Rộng-Dãi-Mắt-Nhỏ-Chống-Muỗi-II-BẢO-HÀNH-1-năm-i.397469085.9220637014
 
 [munghoangphat.com]
 match = 48.0%%
@@ -49,7 +49,7 @@ url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 [www.lazada.vn]
 match = 4.0%%
 title = Màn đỉnh Vuông Tự Bung Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/?srsltid=AfmBOopF8mFWmP9FZG410sdkiOS7hvDKrOEcoOiixvXk5PKX1_3ha2-7
+url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/
 
 [demxanh.com]
 match = 12.0%%
