--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-08-09 17:41:33
+lastsearch = 2024-08-10 00:42:27
 
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 18
-url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html?srsltid=AfmBOorzNh4fkuD94U8kI1uWq4Y60tJeITegpT3CftIFSnvHyCec0XN4
+url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
 
 [shopee.vn]
 match = -100.0%%
@@ -24,7 +24,7 @@ url = https://h5.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038
 [bilystore.vn]
 match = -100.0%%
 title = Thảm phòng ngủ NA18 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na18/?srsltid=AfmBOoqmnNDEvWZH_rDWsGk9tRAN88sPGUCLsBdoiM_p7_78X-tQSDje
+url = https://bilystore.vn/tham-phong-ngu-na18/
 
 [www.lazada.vn]
 match = -125.0%%
@@ -74,7 +74,7 @@ url = https://noithathofaco.net/san-pham/bo-giuong-tu-trang-nhap-khau-hfc-bgt-r0
 [everonvn.com.vn]
 match = -75.0%%
 title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOorWUsRkIp9PSdjMXp8lR3nUfoZpoyXY59pdVC9UoXaYNWnZ3LT6
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [noithatdaithanh.vn]
 match = -35.0%%
@@ -104,7 +104,7 @@ url = https://dogothanhha.vn/san-pham/bo-giuong-ngu-co-dien-cd-18--1467&p=3
 [smlife.vn]
 match = -95.0%%
 title = Giường Ngủ Bọc Nệm Cao Cấp Eadric - 18 | SMLIFE.vn
-url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18?srsltid=AfmBOoph2dtZq48_hIZO8UKKQ0br9uAXUT3fl0IaSMfVrPUHGEP1Qzbu
+url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18
 
 [giuongbenhbaominh.vn]
 match = -95.0%%
