--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-08-09 22:25:58
+lastsearch = 2024-08-10 00:38:56
 
 [tuananh.vn]
 match = 12.0%%
@@ -14,7 +14,7 @@ url = https://tuananh.vn/dem-bong-ep-korea-gam--p110.html
 [demxanh.com]
 match = -48.0%%
 title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html?srsltid=AfmBOooB0SN5FchKmCo4MfXxs6WOgv05CjD4ryEYeMPPRqBkXBCF0FAe
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 
 [demkhangduy.com]
 match = 25.0%%
@@ -34,7 +34,7 @@ url = https://shopee.vn/Đệm-lò-xo-túi-kore-Tuấn-Anh-_180x200x24cm_hành-c
 [demviethome.vn]
 match = -4.0%%
 title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/?srsltid=AfmBOortM4S0aVh3HG-G6xmcwApXZnvEL4B7WUqSNifbRitFIIp0Ghs9
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/
 
 [entershopping.vn]
 match = -36.0%%
