--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-08-09 22:27:01
+lastsearch = 2024-08-10 00:30:17
 
 [www.lazada.vn]
 match = -193.3%%
 title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
-url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html?srsltid=AfmBOoqRVbOSQaYSs6BwoeSusGSwGm3w7Vt6toZ0eqs5FRRSc_YhlEkC
+url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html?srsltid=AfmBOorHfoWqbDP17P0H8NSNJFTgI5REoxPNhrs9BLKal6pqS26l86ce
 
 [shopee.vn]
 match = 13.3%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/Vỏ-gối-vuông-Dollar-45-45cm-i.129451980.11513701819
 [jysk.vn]
 match = -166.7%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOoprfxhW1pel1-544bTmDzfI5u8d7HctGZcEPOxU8iVn4WvaC-8c
+url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOooDsMvGVz57xR-fFjz-P23W6M6JmkcuEY83X11m3COs1bzuQSDG
 
 [chus.vn]
 match = -173.3%%
@@ -29,12 +29,12 @@ url = https://chus.vn/vo-goi-vuong-hmong/
 [ninhouse.vn]
 match = -106.7%%
 title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOopqQ8e8JyLxWAtjWwm1Xwq9Qn3PDVxEuKTOexGDPZdDRO0WbFwu
+url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOoq2XTVhZ8iJRotHcKziJVQtCE3l0Sq7W1oYJjab-So4xqEXlHrm
 
 [lepetit.com.vn]
-match = -140.0%%
-title = Vỏ gối vuông sofa nhung gân sọc 45x45 cm - Le Petit
-url = https://lepetit.com.vn/vo-goi-vuong-sofa-nhung-gan-soc-45x45-cm
+match = -6.7%%
+title = Vỏ gối vuông Ấn Độ - Le Petit
+url = https://lepetit.com.vn/vo-goi-vuong-an-do
 
 [flexhouse.vn]
 match = -160.0%%
@@ -179,5 +179,5 @@ url = https://sinhvien.ufm.edu.vn/hotFerrID.html
 [foreverbedding.net]
 match = -153.3%%
 title = Bộ Sưu Tập Vỏ Gối Cao Cấp Đẹp Mê Ly Tại FOREVER
-url = https://foreverbedding.net/vo-goi?srsltid=AfmBOoqat3_hYMHegoQaAjrBLa46j7FqPXRl95xep1uP8JwpvZFdkKLw
+url = https://foreverbedding.net/vo-goi?srsltid=AfmBOopyKtwyDiauFQ-fPHcsAnBFAod51WFNCOY-vGUg2BaObkwuAmfS
 
