CI images update

--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-08-09 23:37:10
+lastsearch = 2024-08-10 00:53:23
 
 [vnexpress.net]
 match = -128.6%%
@@ -52,8 +52,8 @@ title = Những địa điểm du lịch ở Vũng Tàu đẹp - Etrip4u
 url = https://www.etrip4u.com/du-lich/mach-ban-nhung-dia-diem-du-lich-o-vung-tau-sieu-dep
 
 [www.gt-rider.com]
-match = -133.3%%
-title = HCMC - Vung Tao - Mui Ne - Nha Trang - Quy Nhon - GT-Rider
+match = -138.1%%
+title = HCMC - Vung Tao - Mui Ne - Nha Trang - Quy Nhon - GT Riders
 url = https://www.gt-rider.com/se-asia-motorcycling/threads/hcmc-vung-tao-mui-ne-nha-trang-quy-nhon-quang-ngai-hoi-an.8243/
 
 [sxd.binhdinh.gov.vn]
@@ -107,9 +107,9 @@ title = Du lịch Vũng Tàu mùa hè 2024 có gì chơi & Ăn gì giải nóng
 url = https://datviettour.com.vn/tin-tuc/du-lich-vung-tau-mua-he-2023-co-gi-choi-an-gi-giai-nong
 
 [quyhoach.xaydung.gov.vn]
-match = -90.5%%
-title = Ttr do - Hank ph tic Dgi Tit, ngay 09 thong 02 n
-url = https://quyhoach.xaydung.gov.vn/Images/Quyhoach/fileDK/fbe71c0f-cd36-410c-957b-1b4367a60feb_qd 618_1.pdf
+match = -23.8%%
+title = KHU vUe BAI SAU THANH PHO VONG TAu
+url = https://quyhoach.xaydung.gov.vn/Images/editor/files/UBND-TPVT/THUYẾT MINH ĐỒ ÁN ĐIỀU CHỈNH.pdf
 
 [static1.cafeland.vn]
 match = -128.6%%
