--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -37,9 +37,9 @@ title = Tūī
 url = https://davidtrubridge.com/au/lighting/tui
 
 [www.linkedin.com]
-match = 10.0%%
-title = TUI's Post
-url = https://www.linkedin.com/posts/tuigroup_???-???-????-????-the-activity-7169328748431925248-2RWQ
+match = -200.0%%
+title = TUI
+url = https://www.linkedin.com/company/tuigroup
 
 [www.diepxuan.com]
 match = -133.3%%
