--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-10 00:01:53
+lastsearch = 2024-08-10 00:51:38
 
 [shopee.vn]
 match = -152.6%%
@@ -59,7 +59,7 @@ url = https://chieutrucsaigon.com/chieu-truc-tam/
 [www.lazada.vn]
 match = -84.2%%
 title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
-url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
+url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html?srsltid=AfmBOop8talcuGkvoAugBv6P3fpkK1Y-7swCLei5Owc8cEJqyh9gXI_F
 
 [tiki.vn]
 match = -126.3%%
