--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-09 23:51:39
+lastsearch = 2024-08-10 00:53:02
 
 [hoa18.com]
-match = 10.5%%
-title = Đại lý 63 tỉnh thành Hoa18
-url = https://hoa18.com/dai-ly-63-tinh-thanh-hoa18
+match = -131.6%%
+title = Hoa mõm sói có hình dạng như thế nào và ý nghĩa của nó
+url = https://hoa18.com/goc-tan-man/hoa-mom-soi-co-hinh-dang-nhu-theo-nao
 
 [www.youtube.com]
-match = -142.9%%
-title = YouTube
-url = https://www.youtube.com/watch?v=wIGinEAhcXc
+match = -147.4%%
+title = Cây Mộc Hương Ta Và 8 Loài Hoa Đẹp Chơi Tết 2023 | Đt ...
+url = https://www.youtube.com/watch?v=NPdIFgtFTso
 
 [kallos.co]
 match = -105.3%%
@@ -132,9 +132,9 @@ title =
 url = https://www.bachhoaxanh.com/kinh-nghiem-hay/nu-tam-xuan-la-hoa-gi-cach-cam-nu-tam-xuan-trang-tri-tet-dep-sang-trong-1406607
 
 [shopee.vn]
-match = -84.2%%
-title = [Chỉ Giao HCM Ship Hỏa Tốc] Bó Hoa Cúc Tana ...
-url = https://shopee.vn/-Chỉ-Giao-HCM-Ship-Hỏa-Tốc-Bó-Hoa-Cúc-Tana-Tươi(-1-Bó)-Hoa-Tươi-Hoa18-i.52741467.16241410836
+match = -89.5%%
+title = cây tài lộc giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=cây tài lộc
 
 [baobinhdinh.vn]
 match = -110.5%%
