--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -97,9 +97,9 @@ title = CLB Bóng Đá Bà Rịa Vũng Tàu | Ba Ria
 url = https://www.facebook.com/CLBbongdaBRVT/
 
 [www.cgv.vn]
-match = -143.8%%
-title = CỬU LONG THÀNH TRẠI: VÂY THÀNH 2024 | Thông tin
-url = https://www.cgv.vn/default/twilight-of-the-warriors.html
+match = 6.2%%
+title = CGV Buôn Mê Thuột
+url = https://www.cgv.vn/default/cinox/site/cgv-buon-me-thuot
 
 [hunglien.net]
 match = 37.5%%
@@ -687,9 +687,9 @@ title = Xinh Núm Tình Trên Lộ Bigo Vô Gái
 url = https://kristin-gildemeister.de/4721414-xinh-gái-tình-vô-lộ-núm-trên-bigo.html
 
 [www.momo.vn]
-match = -56.2%%
-title = Lịch chiếu phim BHD Star Long Khánh
-url = https://www.momo.vn/cinema/rap/bhd-star/bhd-star-long-khanh-216
+match = -37.5%%
+title = Lịch chiếu phim Lotte West Lake
+url = https://www.momo.vn/cinema/rap/lotte-cinema/lotte-west-lake-363
 
 [baotintuc.vn]
 match = -37.5%%
