--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-08-09 19:25:02
+lastsearch = 2024-08-10 00:44:56
 
 [www.diepxuan.com]
 match = 10.0%%
 title = Chiếu nhựa Hà Nội 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html?srsltid=AfmBOoo6KfDVB5mKJuKZuBIBgszL-CF1NSMuQ7BdWDzvJCLmeexujgZ-
 
 [shopee.vn]
 match = 70.0%%
