--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-08-09 23:49:55
+lastsearch = 2024-08-10 00:47:24
 
 [suongtuyet.com]
-match = -4.0%%
-title = Nệm Gòn Ép Tuấn Anh Korea Plus Vải Gấm
-url = https://suongtuyet.com/nem-gon-ep-tuan-anh-korea-plus-vai-gam
+match = 16.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Cotton
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
 
 [tuananh.vn]
 match = 12.0%%
@@ -17,9 +17,9 @@ title = Đệm bông ép 3 mảnh Korea Gấm
 url = https://tuananh.vn/dem-bong-ep-korea-gam--p110.html
 
 [demxanh.com]
-match = -12.0%%
-title = Đệm bông ép Tuấn Anh Korea Cotton chính hãng
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-kaki.html
+match = -72.0%%
+title = Đệm bông ép Tuấn Anh chính hãng giá tốt nhất thị trường!
+url = https://demxanh.com/dem-bong-ep-tuan-anh.html
 
 [shopee.vn]
 match = -40.0%%
