--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-08-10 00:55:49
+lastsearch = 2024-08-10 01:16:43
 
 [tiki.vn]
 match = 16.0%%
@@ -44,7 +44,7 @@ url = https://www.roc-taiwan.org/vn_vi/index.html
 [books.google.com]
 match = -8.0%%
 title = Giải Bài Tập SGK Sinh Học 12 Nâng Cao
-url = https://books.google.com/books?id=hnEDEQAAQBAJ&pg=PA168&lpg=PA168&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=Sftq0WQLLm&sig=ACfU3U0k_QT_5N8EwSNX0X_nYS8je4xV0g&hl=en&sa=X&ved=2ahUKEwiJvITUveiHAxXPFFkFHbMrJDUQ6AF6BAg3EAM
+url = https://books.google.com/books?id=hnEDEQAAQBAJ&pg=PA168&lpg=PA168&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=Sftq0WROHg&sig=ACfU3U0T0IvUIc1KtHQPM24V7ouNHPOdzg&hl=en&sa=X&ved=2ahUKEwjYnomqwuiHAxVKMVkFHcH7F9oQ6AF6BAg0EAM
 
 [www.skyscanner.com.vn]
 match = -48.0%%
