--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-08-09 23:43:03
+lastsearch = 2024-08-10 01:24:08
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -226.7%%
-title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P.11, Q ...
-url = https://www.facebook.com/photo.php?fbid=1176105412820080&id=139181649845800&set=a.179106562519975&locale=en_GB
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -450,4 +450,24 @@ url = https://vishipel.com.vn/ve-viec-thiet-lap-moi-phao-bao-hieu-hang-hai-chuye
 match = -200.0%%
 title = GIC TOWER 168/14 NGUYEN GIA TRI, BINH THANH DISTRICT
 url = http://www.giclandgroup.vn/en/van-phong-cho-thue/gic-tower-16814-nguyen-gia-tri-binh-thanh-district
+
+[giaophanhatinh.org]
+match = 7.7%%
+title = Lịch Phụng vụ
+url = https://giaophanhatinh.org/lich-phung-vu-2
+
+[apps.dtic.mil]
+match = -126.7%%
+title = AUTHORITY THIS PAGE IS UNCLASSIFIED - DTIC
+url = https://apps.dtic.mil/sti/pdfs/AD0390963.pdf
+
+[timbus.vn]
+match = -213.3%%
+title = Điều chỉnh lộ trình tuyến xe buýt số 14: Bờ Hồ - Cổ Nhuế
+url = http://timbus.vn/article.aspx?id=100
+
+[shippingschedule.com.vn]
+match = -44.4%%
+title = Locations
+url = https://shippingschedule.com.vn/chicuchaiquan/danhsachdiadiem.html?ChiCucHaiQuanDiaDiem_page=66&ChiCucHaiQuanDiaDiem_sort=MaChiCuc&lang=en
 
