--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-08-09 21:44:55
+lastsearch = 2024-08-10 01:19:35
 
 [shopee.vn]
 match = 25.0%%
@@ -327,9 +327,9 @@ title = Lạc vào vườn thú safari thu nhỏ giữa lòng Tây Đô
 url = https://canthotourism.vn/vi/detailnews/?t=lac-vao-vuon-thu-safari-thu-nho-giua-long-tay-do&id=nspirituality_124
 
 [vnvc.vn]
-match = -206.2%%
-title = 36 điểm chích ngừa 6 trong 1 ở TPHCM cao cấp, uy tín và ...
-url = https://vnvc.vn/chich-ngua-6-trong-1-o-tphcm/
+match = -168.8%%
+title = Hệ thống tiêm chủng - Công ty Cổ phần Vacxin Việt Nam
+url = https://vnvc.vn/he-thong-trung-tam-tiem-chung/
 
 [vksndtc.gov.vn]
 match = -162.5%%
