--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-09 18:12:18
+lastsearch = 2024-08-10 01:31:28
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -17,9 +17,9 @@ title = Bộ ga chun Velina V18 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-velina-v18
 
 [shopee.vn]
-match = -66.7%%
-title = ga chun bọc nệm giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=ga chun bọc nệm
+match = -104.8%%
+title = Bộ Chăn Ga Gối Trải Giường Poly Cotton bo chun miễn phí ...
+url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Trải-Giường-Poly-Cotton-bo-chun-miễn-phí-Ga-trải-giường-BÒ-XÁM-i.600110082.21919470309
 
 [changagoidemsonghong.com]
 match = -57.1%%
