--- a/images/chieu-dieu-hoa-lua-120x190/config.ini
+++ b/images/chieu-dieu-hoa-lua-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-120x190.html
 lastopen = 2024-08-08 20:39:18
 
 [search]
-lastsearch = 2024-08-09 22:18:21
+lastsearch = 2024-08-10 01:22:45
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOorUC-isnvnvD50wx2BgkpCLmCRy5vt7M_cHqXkKEk9qpQOVYUB-
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [thegioidemviet.vn]
 match = -19.2%%
@@ -19,7 +19,7 @@ url = https://thegioidemviet.vn/chieu-dieu-hoa-lua/
 [thegioidemonline.com]
 match = 34.6%%
 title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://thegioidemonline.com/chieu-dieu-hoa-may-vien-lua-loai-dep.html?srsltid=AfmBOorWtKLdOtupgOnC98OiztCEHpbOJ_Nu9hkgsGfnMjj4y8y9A_Q7
+url = https://thegioidemonline.com/chieu-dieu-hoa-may-vien-lua-loai-dep.html
 
 [shopee.vn]
 match = 53.8%%
@@ -69,5 +69,5 @@ url = https://thegioidemtot.vn/434-chieu-dieu-hoa.html
 [www.diepxuan.com]
 match = 42.3%%
 title = Chiếu điều hòa mây 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-may-120x190.html?srsltid=AfmBOorfggF7RYzI18DoKHJC0qDQYQf8IBHNfifw4oUL3c8O2kw4sk7G
+url = https://www.diepxuan.com/chieu-dieu-hoa-may-120x190.html
 
