--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-08-10 00:18:49
+lastsearch = 2024-08-10 01:21:41
 
 [shopee.vn]
 match = -25.0%%
@@ -34,7 +34,7 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 [sieuthidem.vn]
 match = 32.1%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOooV8J4cqJsJLHHrp0v7kPyZwQ0QwH-E0rpx_VXgkpr22oe3Z5Og
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
 
 [kyoryo.vn]
 match = -35.7%%
@@ -99,7 +99,7 @@ url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 [vtvhyundai.vn]
 match = -14.3%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOoq8NDd5vrU-CfmU3hJcMT428mBcjnCxikU87fo-Glo8II0S4Cvn
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
 
 [noithattana.vn]
 match = 21.4%%
