--- a/images/ga-phu-es1807-180x200/config.ini
+++ b/images/ga-phu-es1807-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1807-180x200.html
 lastopen = 2024-06-07 01:02:20
 
 [search]
-lastsearch = 2024-08-09 22:54:35
+lastsearch = 2024-08-10 01:30:04
 
 [everonvn.com.vn]
 match = 14.3%%
 title = Bộ Everon Es1807 - Serenity
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807?srsltid=AfmBOoqlJDrXUEW1PrpPHANrDpBzdtkx5bIjVAvc3lIYxPOu3hmhWpJB
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [everonhanoi.vn]
 match = -23.8%%
