--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-09 22:45:53
+lastsearch = 2024-08-10 01:23:25
 
 [burningman.org]
-match = -60.0%%
-title = The 10 Principles of Burning Man
+match = 0.0%%
+title = 
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
@@ -713,7 +713,7 @@ url = https://www.legodiscoverycenter.com/washington-dc/whats-inside/events/lego
 
 [publicaccess.courts.state.mn.us]
 match = -166.7%%
-title = Home Page - Minnesota Court Records Online (MCRO)
+title = Minnesota Court Records Online (MCRO): Home Page
 url = https://publicaccess.courts.state.mn.us/
 
 [www.g-star.com]
