CI images update

--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-18.html
 lastopen = 2024-06-09 23:45:38
 
 [search]
-lastsearch = 2024-08-10 00:44:12
+lastsearch = 2024-08-10 01:38:52
 
 [chieutruc.info]
 match = -73.9%%
@@ -14,12 +14,12 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 [www.diepxuan.com]
 match = 17.4%%
 title = Chiếu cây Cao Bằng lụa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html?srsltid=AfmBOoomKKFR-hk7_L3wSrjG4TijpF980MW5bpfDU-ud5VYLVqA1kIl2
+url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html?srsltid=AfmBOoq3xzC7sd-YudtHyOiwXffAY76_m1d46rsLKm8Dl5G7Mihu9XAe
 
 [demxanh.com]
 match = -39.1%%
-title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html?srsltid=AfmBOopro3T7c5U8PZmDqegh7EyGOEcTMpe-r-ZR4_JrSv2KHICVZaNr
+title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html?srsltid=AfmBOopN3JdFnsY1SO7EkXs5k3iTgAm8iJjGeWuJJPtXFz8_rERomRe-
 
 [shopee.vn]
 match = -78.3%%
@@ -99,7 +99,7 @@ url = https://www.sendo.vn/chieu-truc-cao-bang.htm
 [www.lazada.vn]
 match = -39.1%%
 title = Chiếu Tre Cao bằng Nan to loại đẹp Mát Lạnh Mùa Hè
-url = https://www.lazada.vn/products/chieu-truc-long-chieu-tre-cao-bang-nan-to-loai-dep-mat-lanh-mua-he-du-tat-ca-cac-kich-thuoc-i2239379152.html
+url = https://www.lazada.vn/products/chieu-truc-long-chieu-tre-cao-bang-nan-to-loai-dep-mat-lanh-mua-he-du-tat-ca-cac-kich-thuoc-i2239379152.html?srsltid=AfmBOordieLWedt3QdGP6G1KwEEXDu6MzkWiHQcQtY3G7fmkAKy_5Hfi
 
 [chieutruccaobang.com]
 match = -69.6%%
