--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-08-09 23:43:46
+lastsearch = 2024-08-10 01:41:23
 
 [shopee.vn]
 match = -24.0%%
@@ -42,9 +42,9 @@ title = Chiếu điều hòa 4D Hanvico Cool Mattress kẻ kem (XẢ KHO)
 url = https://demxanh.com/chieu-dieu-hoa-4d-hanvico-cool-mattress-ke-kem.html
 
 [tiki.vn]
-match = -20.0%%
-title = Chieu dieu hoa kem vo goi hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chieu dieu hoa kem vo goi
+match = 16.0%%
+title = Chiếu điều hòa có mát không? Review 10 ...
+url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [goni.vn]
 match = 8.0%%
@@ -110,4 +110,9 @@ url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
 match = -52.0%%
 title = Chiếu mây điều hòa, chiếu điều hòa nhật bản loại dày 2 ...
 url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-dieu-hoa-nhat-ban-loai-day-2-lop-cao-cap-thong-minh-sieu-mat-va-sieu-thoang-i1358882625.html
+
+[www.facebook.com]
+match = 64.0%%
+title = Chiếu Điều Hòa Cao Su Non
+url = https://www.facebook.com/groups/753270865357544/
 
