--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-10 01:27:13
+lastsearch = 2024-08-10 01:42:05
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -109,7 +109,7 @@ url = https://stableprogram.org/pdf/vietnamese/STABLE Vietnamese Learner Manual 
 [drhc-cosmetics.com]
 match = -60.7%%
 title = DR.HC All-Natural Skincare Face Soap - Goat Milk Orange ...
-url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18
+url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18?srsltid=AfmBOops_rWl_NNOyrHzH1x5sjyZfJWWnbkELshA1w0zePAioIwiZ59d
 
 [quangduc.com]
 match = -42.9%%
