--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-10 00:45:14
+lastsearch = 2024-08-10 01:36:03
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -604,7 +604,7 @@ url = https://dienmaycholon.com/kinh-nghiem-mua-sam/cat-toc-ngay-nao-tot-ngay-ca
 [www.bachhoaxanh.com]
 match = -205.9%%
 title = Tổng hợp 18 loại hoa cát tường, thu hút tài lộc trong năm mới
-url = https://www.bachhoaxanh.com/kinh-nghiem-hay/tong-hop-18-loai-hoa-cat-tuong-thu-hut-tai-loc-nen-bay-trong-nha-dip-nam-moi-de-may-man-1318583?srsltid=AfmBOoqnNFs2aan2HVDKBn__9lY6Id-iNR2iQ_uAKpMWmVn9wW3LCSLE
+url = https://www.bachhoaxanh.com/kinh-nghiem-hay/tong-hop-18-loai-hoa-cat-tuong-thu-hut-tai-loc-nen-bay-trong-nha-dip-nam-moi-de-may-man-1318583
 
 [www.facebook.com]
 match = 18.8%%
@@ -690,4 +690,9 @@ url = https://phedecor.com/tin-tuc/cac-loai-binh-cam-hoa.html
 match = -205.9%%
 title = N.J.A.C. 7:9A – Standards for Individual Subsurface Sewage ...
 url = https://dep.nj.gov/wp-content/uploads/rules/njac7_9a.pdf
+
+[hellohoa.com]
+match = -111.8%%
+title = 199+ Hình Ảnh Đẹp Nhất Của 20 Loài Hoa Màu Tím
+url = https://hellohoa.com/hoa-dep/hoa-mau-tim/
 
