--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-08-09 22:29:33
+lastsearch = 2024-08-10 01:47:01
 
 [everon.vip]
-match = 44.4%%
-title = Nệm Everon Ceramic
-url = https://everon.vip/nem-everon-ceramic
+match = -10.0%%
+title = NỆM EVERON
+url = https://everon.vip/nem
 
 [everonvn.com.vn]
 match = 23.8%%
@@ -42,8 +42,8 @@ title = Đệm bông ép everon 160 x 200 x 15 cm hàng chính hãng, ...
 url = https://tiki.vn/search?q=đệm bông ép everon 160 x 200 x 15 cm
 
 [demqueensweet.com]
-match = -119.0%%
-title = Giá Đệm Queensweet, Đệm Hàn Quốc Queensweet Hà Nội ...
+match = -57.1%%
+title = Đệm Queensweet Giá Rẻ – Đệm Hàn Quốc ...
 url = https://demqueensweet.com/
 
 [everon365.vn]
@@ -62,9 +62,9 @@ title = 160 X 200 Archives | Showroom Chăn Ga Gối đệm EVERON
 url = https://everon.com.vn/size/160-x-200/
 
 [demxanh.com]
-match = -123.8%%
-title = [Cập nhật] Bảng giá đệm bông ép Elan khuyến mại năm ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-elan-2021.html
+match = -128.6%%
+title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html?srsltid=AfmBOorSsx3zisA3_JTVXpYvMhFZ3_FDunsY6hwuvoy1IYjS5Pf95LrM
 
 [www.diepxuan.com]
 match = -10.0%%
