CI images update

--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-10 00:31:39
+lastsearch = 2024-08-10 01:47:32
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -57,14 +57,14 @@ title = Christopher Dvorak, MD
 url = https://profiles.ucsf.edu/christopher.dvorak
 
 [www.ncbi.nlm.nih.gov]
-match = -130.0%%
-title = Exercise in patients with inflammatory bowel diseases
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
+match = -150.0%%
+title = Consensus Guidelines on the Use of Intravenous Ketamine ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6023575/
 
 [profiles.ucla.edu]
-match = -41.7%%
-title = Antoni Ribas
-url = https://profiles.ucla.edu/antoni.ribas
+match = -6.7%%
+title = Steven C Cramer
+url = https://profiles.ucla.edu/steven.cramer
 
 [www.sec.gov]
 match = -20.0%%
