--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-08-09 19:58:20
+lastsearch = 2024-08-10 02:01:44
 
 [www.lazada.vn]
 match = -27.8%%
@@ -14,7 +14,7 @@ url = https://www.lazada.vn/tag/vo-goi-50x70-trang/
 [ru9.vn]
 match = -38.9%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOoqlZn15kkkwU6FZ6gbWEzZ93WUl3rQxlOKFiS0V4F6eKEiCfDqa
 
 [www.diepxuan.com]
 match = -55.6%%
@@ -49,7 +49,7 @@ url = {search_url}
 [ninhouse.vn]
 match = 44.4%%
 title = Vỏ gối nằm Classic
-url = https://ninhouse.vn/collections/vo-goi-nam-classic
+url = https://ninhouse.vn/collections/vo-goi-nam-classic?srsltid=AfmBOoo_fmdYWvDeUmEPdoDb6JCL_LNe8Fz1sX-FNsBouA8PCzNGfe_F
 
 [tonybed.vn]
 match = 22.2%%
@@ -89,7 +89,7 @@ url = https://thegioidemviet.vn/vo-goi-khach-san/
 [demxanh.com]
 match = -155.6%%
 title = Chuyên các sản phẩm vỏ gối chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/vo-goi.html
+url = https://demxanh.com/vo-goi.html?srsltid=AfmBOooSeokuqRsj-3PdTfP94EZ9bKnzxmy9wu0I3R31WgZxWHc1cJD8
 
 [templeshalom.ca]
 match = 0.0%%
@@ -257,9 +257,9 @@ title = O %% NUY d:M~MN
 url = https://www.nrc.gov/docs/ML1922/ML19221A563.pdf
 
 [www.axor-design.com]
-match = -111.1%%
-title = 3-hole basin mixer 70 with push-open waste set
-url = https://www.axor-design.com/int/articledetail-axor-myedition-3-hole-basin-mixer-70-with-push-open-waste-set-47050000
+match = -138.9%%
+title = AXOR Universal Softsquare Shower door handle 444 mm
+url = https://www.axor-design.com/asia/articledetail-axor-universal-softsquare-shower-door-handle-444-mm-42837000
 
 [changakhachsan.net]
 match = 43.8%%
