--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-09 23:18:04
+lastsearch = 2024-08-10 01:59:03
 
 [tiki.vn]
 match = -138.9%%
@@ -52,9 +52,9 @@ title = Bộ Chăn Ga Gối Làm Mát Gấu Hóme Cóordy SS24 ...
 url = https://aeoneshop.com/product/29675/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xam
 
 [everonvn.com.vn]
-match = -116.7%%
-title = Bộ Ga Chun Chần Everon Green-Solid Giảm Giá 35%%
-url = https://everonvn.com.vn/everon/2149/bo-ga-chun-chan-green-solid
+match = 27.8%%
+title = Bộ Everon Esm-20011
+url = https://everonvn.com.vn/everon/809/bo-everon-esm-20011
 
 [www.everonvni.vn]
 match = -77.8%%
@@ -72,9 +72,9 @@ title = Bộ Drap phủ ViVaBon SL102 (160x200) - draphoangcuong
 url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-vivabon-sl102-160x200-sp202129.html
 
 [antbedding.com]
-match = -33.3%%
-title = Bộ Chăn Ga Gối Modal Cotton MC13
-url = https://antbedding.com/bo-chan-ga-goi-modal-cotton-mc13
+match = 33.3%%
+title = Bộ Chăn Ga Gối Eu04
+url = https://antbedding.com/bo-chan-ga-goi-eu04
 
 [www.mym.com.vn]
 match = -57.1%%
