--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-08-10 01:18:53
+lastsearch = 2024-08-10 01:55:17
 
 [www.instagram.com]
-match = -107.7%%
-title = Hoi Chan (@hoichandraws) - Instagram
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -30.8%%
+title = Yuki Chan (@yukichan_la)
+url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
 match = 23.1%%
@@ -87,9 +87,9 @@ title = CH.6 by Yuki Chan on Prezi
 url = https://prezi.com/audhwqir0lhx/ch6/
 
 [tel.directory.gov.hk]
-match = -292.3%%
-title = Telephone Directory of the Government of the HKSAR And ...
-url = https://tel.directory.gov.hk/0242005094_ENG.html
+match = -46.2%%
+title = Civil Engineering Office
+url = https://tel.directory.gov.hk/0275013459_ENG.html
 
 [www.straitstimes.com]
 match = -161.5%%
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -300.0%%
-title = Hoi Chan Translates Everyday Experiences into ... - Colossal
+match = -215.4%%
+title = Hoi Chan Translates Everyday Experiences into ...
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
