--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-08-09 12:43:36
+lastsearch = 2024-08-10 01:48:58
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -450,4 +450,9 @@ url = https://masterisehomes.com/lumiere-boulevard/vn/project
 match = -18.2%%
 title = Luồng tuyến
 url = http://timbus.vn/fleets.aspx
+
+[jumparena.vn]
+match = -246.7%%
+title = Top các địa điểm leo núi đá nhân tạo trong nhà ở Sài Gòn ...
+url = https://jumparena.vn/blogs/news/top-cac-dia-diem-leo-nui-da-nhan-tao-trong-nha-o-sai-gon-2023
 
