--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-09 17:23:35
+lastsearch = 2024-08-10 01:48:37
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -19,7 +19,7 @@ url = https://www.thegioididong.com/hoi-dap/2-cach-do-size-vong-tay-lac-tay-chin
 [cellphones.com.vn]
 match = -212.5%%
 title = Balo laptop | Túi chống sốc kháng nước tốt, mẫu mới cao cấp
-url = https://cellphones.com.vn/phu-kien/balo-tui-chong-soc-laptop.html
+url = https://cellphones.com.vn/phu-kien/balo-tui-chong-soc-laptop.html?srsltid=AfmBOooyFkO6vUOvDg4umA9Vfm9zSNgfkCoFG2ZY5h6oc_TfZgux07Lt
 
 [www.diepxuan.com]
 match = 87.5%%
@@ -302,9 +302,9 @@ title = Bị Nghiêp đòng Dâm Hiếp - Chồng bất lực nhìn vợ bị
 url = https://jebbia.it/1309260-bị-hiếp-nghiêp-đòng-dâm.html
 
 [www.momo.vn]
-match = -100.0%%
-title = Phim chiếu rạp | Lịch chiếu phim trên MoMo
-url = https://www.momo.vn/cinema/lich-chieu
+match = -68.8%%
+title = Lịch chiếu phim CGV Bình Dương Square
+url = https://www.momo.vn/cinema/rap/cgv/cgv-binh-duong-square-15
 
 [hico.vn]
 match = -168.8%%
