--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-09 05:53:58
+lastsearch = 2024-08-10 01:53:07
 
 [chieutrucsaigon.com]
 match = -8.3%%
@@ -27,9 +27,9 @@ title = Chiếu Nằm (Chiếu Tre, Chiếu Trúc, Chiếu Cói,..)
 url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-truc-chieu-coi,..).html
 
 [www.facebook.com]
-match = 25.0%%
-title = Chiếu Trúc Tre Việt Nam | Hanoi
-url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
+match = -266.7%%
+title = My Tam
+url = https://www.facebook.com/mytam.info/?locale=vi_VN
 
 [shopee.vn]
 match = 50.0%%
@@ -255,4 +255,14 @@ url = https://stc.dongthap.gov.vn/
 match = -75.0%%
 title = Công ty nước sạch Hà Nội | Hanoi Water Limited Company
 url = http://www.hawacom.vn/
+
+[www.quynhonport.vn]
+match = -37.5%%
+title = QUY NHON PORT - CÔNG TY CỔ PHẦN CẢNG QUY NHƠN
+url = https://www.quynhonport.vn/
+
+[customs.gov.vn:8228]
+match = -171.4%%
+title = Tin tức
+url = http://customs.gov.vn:8228/index.jsp?pageId=2&aid=157500&cid=25
 
