--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-09 23:40:54
+lastsearch = 2024-08-10 01:50:41
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -27,14 +27,14 @@ title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 7, 2024
 url = https://tiki.vn/search?q=chiếu trúc hạt
 
 [demxanh.com]
-match = -9.7%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoon1wCwQ7gwCrxWY6sZG_FpywE1p64IBEBnWCzbBSMwp-chPH7v
+match = -3.2%%
+title = Chuyên cung cấp chiếu trúc hạt các hãng hàng ...
+url = https://demxanh.com/chieu-truc-hat.html
 
 [www.sendo.vn]
-match = 54.8%%
-title = chiếu trúc hạt quế lâm hoa m8 - hjhgt
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-hoa-m8-29675515.html
+match = 0.0%%
+title = Chiếu trúc Quế Lâm loại 1 cao cấp ( loại có 2 mắt ngọc) ...
+url = https://www.sendo.vn/anh-that-100-chieu-truc-que-lam-loai-1-cao-cap-loai-co-2-mat-ngoc-duo-c-kie-m-ha-ng-42210887-117572298.html
 
 [www.lazada.vn]
 match = 16.1%%
@@ -47,9 +47,9 @@ title = Chiếu trúc Quế Lâm I 140x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-truc-que-lam-i-140x190.html
 
 [www.facebook.com]
-match = 66.7%%
-title = Chiếu Trúc Quế Lâm | Hai Phong
-url = https://www.facebook.com/ChieuTrucQueLam/
+match = -31.6%%
+title = Thế Giới Chiếu Trúc
+url = https://www.facebook.com/thegioichieutruc/
 
 [www.dienmayxanh.com]
 match = -29.0%%
