CI images update

--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-10 01:36:03
+lastsearch = 2024-08-10 02:12:47
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -695,4 +695,9 @@ url = https://dep.nj.gov/wp-content/uploads/rules/njac7_9a.pdf
 match = -111.8%%
 title = 199+ Hình Ảnh Đẹp Nhất Của 20 Loài Hoa Màu Tím
 url = https://hellohoa.com/hoa-dep/hoa-mau-tim/
+
+[aristino.com]
+match = -88.2%%
+title = Top 18+ Kiểu Tóc Nam Xoăn Đẹp Nhất Năm 2023
+url = https://aristino.com/blog/top-18-kieu-toc-nam-xoan-dep-nhat-nam-2023/
 
