--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-08-10 00:59:20
+lastsearch = 2024-08-10 02:14:14
 
 [www.tiktok.com]
-match = -193.8%%
-title = Wendy Dodo Sugar Box opening . . . #wendydodosugar ...
-url = https://www.tiktok.com/@unboxing_serotonin/video/7252768147143462186
+match = -168.8%%
+title = Carla We LOVE YOU!!! ❤️❤️❤️ Thank you beautiful for ...
+url = https://www.tiktok.com/@hudabeauty/video/7377293288686013739
 
 [digitalmaine.com]
 match = -75.0%%
@@ -32,9 +32,9 @@ title = Nhu shop | Binh Dinh
 url = https://m.facebook.com/p/Nhu-shop-100036848391375/?locale=is_IS
 
 [www.diepxuan.com]
-match = -68.8%%
-title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOopTiM1JVZZaLKtRKv1Ss2mR52h220ckCnGDnKELUxhs9E8hoVq5
+match = 18.8%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [diepxuan.com]
 match = 6.2%%
