--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-08-10 00:20:54
+lastsearch = 2024-08-10 02:17:19
 
 [changagoidemsonghong.com]
 match = 18.5%%
@@ -152,9 +152,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [elmichsleep.vn]
-match = -25.9%%
-title = Mua Chăn Ga Gối Cao Cấp - Đạt chuẩn chất lượng Châu Âu
-url = https://elmichsleep.vn/chan-ga-goi
+match = -22.2%%
+title = Bộ chăn ga gối Cao Cấp - Tuyệt đối an toàn cho sức khỏe
+url = https://elmichsleep.vn/bo-chan-ga-goi
 
 [khodemgiagoc.com]
 match = -37.0%%
