--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-09 19:28:33
+lastsearch = 2024-08-10 02:23:00
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -27,14 +27,14 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -223.5%%
-title = Translational strategies for neuroprotection in ischemic stroke
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3933947/
+match = -200.0%%
+title = Discovery of a novel third-generation EGFR inhibitor and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
 
 [books.google.com]
-match = -11.8%%
-title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWXEQ-q2h&sig=ACfU3U1ryc1KqlGSlH4pXtz7fZ9cKMnQ4Q&hl=en&sa=X&ved=2ahUKEwiD4cGpy-eHAxVYhYkEHUr3JKkQ6AF6BAg2EAM
+match = -200.0%%
+title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
+url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0v5s_2Je&sig=ACfU3U3FM7IH2KwjsqdF7onk3zLM8T60qw&hl=en&sa=X&ved=2ahUKEwi_2LmS0eiHAxXOHzQIHbNFDYoQ6AF6BAgkEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -109,7 +109,7 @@ url = https://www.aasv.org/library/swineinfo/series_index.php?id=4
 [www.diepxuan.com]
 match = -29.4%%
 title = Chăn KQ không sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOorqMVsfTHu87p_a4-RJODE9KG9s1D-bjUz36rLJO8GmdUn36sF_
+url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html
 
 [www.kvaser.cn]
 match = -5.9%%
