--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-10 01:42:05
+lastsearch = 2024-08-10 02:28:35
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -17,9 +17,9 @@ title = Khay đá 18 viên nhựa Việt Nhật / Khay Đá Kim Cương 18 ...
 url = https://www.lazada.vn/products/khay-da-18-vien-nhua-viet-nhat-khay-da-kim-cuong-18-vien-khuon-lam-da-i1397366047.html
 
 [www.instagram.com]
-match = 11.5%%
-title = Khánh Linh (@t_khanh_linh)
-url = https://www.instagram.com/t_khanh_linh/?hl=en
+match = -32.1%%
+title = Do Tuan Anh (@dotuananh1802) • Фото и видео в ...
+url = https://www.instagram.com/dotuananh1802/?locale=ru&hl=am-et
 
 [ninhbinhstone.com]
 match = -25.0%%
@@ -109,7 +109,7 @@ url = https://stableprogram.org/pdf/vietnamese/STABLE Vietnamese Learner Manual 
 [drhc-cosmetics.com]
 match = -60.7%%
 title = DR.HC All-Natural Skincare Face Soap - Goat Milk Orange ...
-url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18?srsltid=AfmBOops_rWl_NNOyrHzH1x5sjyZfJWWnbkELshA1w0zePAioIwiZ59d
+url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18
 
 [quangduc.com]
 match = -42.9%%
