--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-08-10 01:44:17
+lastsearch = 2024-08-10 02:19:22
 
 [shopee.vn]
 match = -28.0%%
@@ -48,8 +48,8 @@ url = https://nghiencuuchienluoc.org/cac-doi-sach-lon-cua-dai-loan-trong-nhung-n
 
 [books.google.com]
 match = -80.0%%
-title = Từ điẻ̂n địa chí Bạc Liêu - Page 737 - Google Books Result
-url = https://books.google.com/books?id=GdKw75bQHZUC&pg=PA737&lpg=PA737&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=hUKgj9bo__&sig=ACfU3U3AmfetvzBpRqlBksnTgGBq6h0nWg&hl=en&sa=X&ved=2ahUKEwiCtdi-yOiHAxWUMlkFHfTzMs4Q6AF6BAgZEAM
+title = Địa chí Bắc Giang từ điển - Page 816 - Google Books Result
+url = https://books.google.com/books?id=EoNuAAAAMAAJ&pg=PA816&lpg=PA816&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=-WEAfW0zoQ&sig=ACfU3U1LVs5VpJxHZy5u5QXBQ-nfYifJOA&hl=en&sa=X&ved=2ahUKEwiO38Sq0OiHAxUuCTQIHdEtJYUQ6AF6BAg6EAM
 
 [cellphones.com.vn]
 match = -52.0%%
