--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-08-09 22:22:53
+lastsearch = 2024-08-10 02:11:26
 
 [shopee.vn]
 match = 4.3%%
@@ -42,8 +42,8 @@ title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
 url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
 
 [chuyenhangviet.com]
-match = -73.9%%
-title = Chiếu Tre Việt Phổ Mến Thái Bình cao cấp - Chăn ga gối đệm
+match = -82.6%%
+title = Chiếu Tre Việt Phổ Mến Thái Bình cao cấp - Chuyên Hàng Việt!
 url = https://chuyenhangviet.com/chieu-tre-viet-pho-men-thai-binh-cao-cap/
 
 [tiki.vn]
