--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-10 01:50:41
+lastsearch = 2024-08-10 02:23:44
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -12,14 +12,14 @@ title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
 url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
-match = 32.3%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html?size=16
+match = -6.5%%
+title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [shopee.vn]
-match = 48.4%%
-title = Chiếu trúc Quế Lâm - hàng chuẩn loại 1
-url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-hàng-chuẩn-loại-1-i.20551076.970075626
+match = 16.1%%
+title = chiếu trúc giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc
 
 [tiki.vn]
 match = -19.4%%
@@ -32,9 +32,9 @@ title = Chuyên cung cấp chiếu trúc hạt các hãng hàng ...
 url = https://demxanh.com/chieu-truc-hat.html
 
 [www.sendo.vn]
-match = 0.0%%
-title = Chiếu trúc Quế Lâm loại 1 cao cấp ( loại có 2 mắt ngọc) ...
-url = https://www.sendo.vn/anh-that-100-chieu-truc-que-lam-loai-1-cao-cap-loai-co-2-mat-ngoc-duo-c-kie-m-ha-ng-42210887-117572298.html
+match = 54.8%%
+title = chiếu trúc hạt quế lâm hoa m8 - hjhgt
+url = https://www.sendo.vn/chieu-truc-hat-que-lam-hoa-m8-29675515.html
 
 [www.lazada.vn]
 match = 16.1%%
