--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-10 00:32:21
+lastsearch = 2024-08-10 02:15:36
 
 [demxanh.com]
 match = 37.0%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOoowBlexk-TJXpdpoT9toC86quVVcxDAhrLCmBDWxFHlUV52R7KD
+url = https://demxanh.com/chieu-truc-den.html
 
 [demre.com.vn]
 match = 66.7%%
@@ -44,7 +44,7 @@ url = https://thegioidemviet.vn/chieu-truc/
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Chiếu trúc trung quốc
-url = https://www.diepxuan.com/chieu-truc/chieu-truc-trung-quoc.html?srsltid=AfmBOoo0xaEcyXQXOzgfntLFv4HfcLN9r9__3AqUeAM-SeZcOFcsjQIL
+url = https://www.diepxuan.com/chieu-truc/chieu-truc-trung-quoc.html
 
 [shopee.vn]
 match = -18.5%%
