--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-09 23:27:13
+lastsearch = 2024-08-10 02:24:26
 
 [us.misumi-ec.com]
 match = -350.0%%
 title = GA16-16-6 | Enclosures - ABS Box, Water/Dust Proof, GA Series
-url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6&srsltid=AfmBOorOUn2urc28l8w72irHCepM3S5lGmMBW3j4XSxkeQCgWepHO5Bx
+url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6
 
 [www.amazon.com]
 match = -91.7%%
@@ -362,9 +362,9 @@ title = ECON Home | ECON l Department of Economics l University ...
 url = https://www.econ.umd.edu/
 
 [profiles.ucdavis.edu]
-match = 8.3%%
-title = Pamela J Lein
-url = https://profiles.ucdavis.edu/pamela.lein
+match = -8.3%%
+title = Bruce Hammock
+url = https://profiles.ucdavis.edu/bruce.hammock
 
 [www.ess.uci.edu]
 match = -358.3%%
