--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-08-10 00:21:37
+lastsearch = 2024-08-10 02:11:48
 
 [screenrant.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -114.3%%
-title = About the EB-5 Visa Classification
-url = https://www.uscis.gov/working-in-the-united-states/permanent-workers/employment-based-immigration-fifth-preference-eb-5/about-the-eb-5-visa-classification
+match = -7.1%%
+title = Explore my Options
+url = https://www.uscis.gov/forms/explore-my-options
 
 [www.evergreenrecreation.com]
 match = -157.1%%
@@ -87,9 +87,9 @@ title = Green card
 url = https://en.wikipedia.org/wiki/Green_card
 
 [www.imdb.com]
-match = -7.1%%
-title = The Green Mile (1999)
-url = https://www.imdb.com/title/tt0120689/
+match = 0.0%%
+title = Green Book (2018)
+url = https://www.imdb.com/title/tt6966692/
 
 [www.boundless.com]
 match = -128.6%%
