--- a/images/tham-bali-180x230/config.ini
+++ b/images/tham-bali-180x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-180x230.html
 lastopen = 2024-06-07 00:36:20
 
 [search]
-lastsearch = 2024-08-09 20:29:16
+lastsearch = 2024-08-10 02:18:41
 
 [www.noithatpassion.com]
 match = -129.4%%
@@ -95,4 +95,9 @@ url = https://natashaoakleyblog.com/my-bali-adventure/
 match = -41.2%%
 title = Thảm trải sàn Bali siêu khuyến mại
 url = https://demxanh.com/tham-trai-san-bali.html
+
+[prettycosmetics.vn]
+match = -82.4%%
+title = THẢM PHỦ SOFA,THẢM THỔ CẨM VINTAGE 180x230(ĐỎ)
+url = https://prettycosmetics.vn/tham-phu-sofa-tham-tho-cam-vintage-180x230-do-59419671.html
 
