--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-10 03:15:57
+lastsearch = 2024-08-10 04:26:09
 
 [www.bible.com]
 match = -135.7%%
@@ -27,9 +27,9 @@ title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
 url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
 
 [manthutrang.com]
-match = -207.1%%
-title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
-url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
+match = -228.6%%
+title = Hướng dẫn sử dụng màn tự bung đỉnh rộng chân vải Thu Trang
+url = https://manthutrang.com/blogs/video/huong-dan-su-dung-man-tu-bung-dinh-rong-chan-vai-thu-trang
 
 [easydream.vn]
 match = -185.7%%
@@ -127,9 +127,9 @@ title = Mùng Chụp tự bung Xếp Gọn cỡ Lớn nhiều size
 url = https://thongminhtienich.vn/mung-chup-tu-bung-xep-gon-co-lon-nhieu-size/
 
 [m.facebook.com]
-match = -221.4%%
-title = All the Awesome August events revealed now! 🎉 AFO ...
-url = https://m.facebook.com/HonorofKingsGlobal/photos/all-the-awesome-august-events-revealed-now-afo-events-are-about-to-start-partici/480011494735407/
+match = -228.6%%
+title = Mark 16:16 A ringa baptisma chang chu chhandamin an ...
+url = https://m.facebook.com/groups/1684995845046002/posts/3418252808386955/
 
 [tbmart.vn]
 match = -21.4%%
