--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-09 23:46:27
+lastsearch = 2024-08-10 04:28:56
 
 [everon.com.vn]
 match = 14.8%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Everon EPM 22063
 url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
 
 [everon.online]
-match = -5.0%%
-title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
-url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
+match = -44.4%%
+title = Bộ Everon EPM22063
+url = https://everon.online/products/bo-everon-epm-22063
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -68,8 +68,8 @@ url = https://m.facebook.com/story.php/?story_fbid=430777606143789&id=1000763466
 
 [sieuthidemhanquoc.com.vn]
 match = 21.2%%
-title = Bộ chăn ga gối Everon EPM – 21061
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21061-1507
+title = Bộ chăn ga gối Everon EPM – 21063
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21063-1508
 
 [everonvn.com.vn]
 match = -47.4%%
