--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-08-10 00:35:51
+lastsearch = 2024-08-10 04:18:10
 
 [www.muji.com]
-match = -33.3%%
-title = RUỘT CHĂN
-url = https://www.muji.com/vn/products/section/E30001
+match = -221.4%%
+title = Contacts in 24 Hours Exhibition Observe・Listen・Touch
+url = https://www.muji.com/hk-en/event/201704_24hr/
 
 [thegioidemviet.vn]
 match = -192.9%%
@@ -62,9 +62,9 @@ title = Mua Chăn Lông tuyết Muji siêu mềm mịn cao cấp 1,8kg
 url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129.html
 
 [www.muji.us]
-match = -7.1%%
-title = Tableware | Home
-url = https://www.muji.us/collections/tableware
+match = -50.0%%
+title = MUJI USA
+url = https://www.muji.us/
 
 [xachtaynhat.com.vn]
 match = -35.7%%
