--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-10 03:18:25
+lastsearch = 2024-08-10 04:19:56
 
 [batdongsan.com.vn]
 match = -180.0%%
@@ -14,7 +14,7 @@ url = https://batdongsan.com.vn/ban-can-ho-chung-cu-khu-dan-cu-phu-loi
 [vinatools.com]
 match = -200.0%%
 title = Kéo cắt tôn dày 1.0mm BESSEY D208, lưỡi cong cắt ...
-url = https://vinatools.com/keo-cat-ton-d208/?srsltid=AfmBOopx67Ysmqs7rYWyzAYrr3dynDawIScpCVVYLy3J2-NMTQaLVL3d
+url = https://vinatools.com/keo-cat-ton-d208/
 
 [shopvnb.com]
 match = -166.7%%
