--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-10 00:36:33
+lastsearch = 2024-08-10 04:17:07
 
 [agasound.vn]
 match = 6.7%%
@@ -54,7 +54,7 @@ url = https://www.lineabon.vn/product-page/lineabon-d3k2
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 12
-url = https://www.diepxuan.com/chieu-lac-d2-12.html?srsltid=AfmBOorIgye4z5NmovIe803LWpG-4J3b9tfjjmj3bVMUsZMp3KoYXmV1
+url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
 match = -200.0%%
@@ -154,7 +154,7 @@ url = https://www.tsttourist.com/vn/tay-an-khai-phong-lac-du-TSTOBCN31-TSTOBCN31
 [bibomart.com.vn]
 match = -6.7%%
 title = BioAmicus Vitamin D3K2
-url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html?srsltid=AfmBOorJ8TJ6kYzD5xz9umtWZQlkH36Ccx2SjGWZe9IqjjfRvQi6EgWo
+url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html
 
 [cungnhaulamgiau.vn]
 match = -206.7%%
