--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-10 01:57:00
+lastsearch = 2024-08-10 04:13:42
 
 [everonvn.com.vn]
 match = -133.3%%
@@ -22,9 +22,9 @@ title = Chiếu cây HT 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [muathongminh.vn]
-match = -142.9%%
-title = cotton lụa khung mềm như lụa set 5 món ga phủ trần bông ...
-url = https://muathongminh.vn/cotton-lua-khung-mem-nhu-lua-set-5-mon-ga-phu-tran-bong-cao-cap-chan-tran-bong-so-tam-day-dan-p.1__7351007633__289057741
+match = -66.7%%
+title = Bộ chăn bốn mùa ga phủ vỏ gối EVERON ESM21011
+url = https://muathongminh.vn/bo-chan-bon-mua-ga-phu-vo-goi-everon-esm21011-p.1__5442067327__7352455
 
 [beecost.vn]
 match = -176.2%%
