--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-08-10 03:51:10
+lastsearch = 2024-08-10 04:24:45
 
 [shopee.vn]
 match = -178.6%%
@@ -34,7 +34,7 @@ url = https://www.mantubung.com/
 [www.lazada.vn]
 match = -242.9%%
 title = màn tự bung hàng cao cấp, nhiều kích thước, gấp gọn tiện ...
-url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-man-tu-bung-hang-cao-cap-nhieu-kich-thuoc-gap-gon-tien-dung-chong-muoi-hieu-qua-i1531214550.html
+url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-man-tu-bung-hang-cao-cap-nhieu-kich-thuoc-gap-gon-tien-dung-chong-muoi-hieu-qua-i1531214550.html?srsltid=AfmBOoqxxQp5zni-XRSX3d37KG9COnSkjDiMlDnhGgMXilCaTo_IasQ7
 
 [www.mungbaobao.com]
 match = -214.3%%
