--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-10 01:25:54
+lastsearch = 2024-08-10 04:23:04
 
 [www.diepxuan.com]
-match = 27.3%%
-title = Thảm giường Bode 140x190 - Điệp Xuân
+match = 36.4%%
+title = Điệp Xuân Thảm giường Bode 140x190
 url = https://www.diepxuan.com/tham-giuong-bode-140x190.html
 
 [tiki.vn]
@@ -162,8 +162,8 @@ title = Ga Chun 140 x 200 cm Bọc Nệm Cotton ... - JYSK.vn
 url = https://jysk.vn/ga-chun-140x200cm
 
 [noithatcaco.vn]
-match = -109.1%%
-title = 78+ mẫu giường bệt gỗ tự nhiên đẹp, sang trọng với giá tốt
+match = -77.3%%
+title = 78+ mẫu giường bệt gỗ tự nhiên đẹp, sang trọng ...
 url = https://noithatcaco.vn/cam-nang-noi-that/mau-giuong-bet-go-tu-nhien-dep-849.html
 
 [www.facebook.com]
