CI images update

--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -82,9 +82,9 @@ title = D2 Cột Bóng rổ, Hầm chui, Vận động-Thể chất - Đồ chơ
 url = https://dochoimamnon123.com/d2-cot-bong-ro-ham-chui-van-dong-the-chat
 
 [m.facebook.com]
-match = -106.7%%
-title = Tìm các thành viên thất lạc của A12-CMA nào
-url = https://m.facebook.com/groups/HocSinhHN/posts/1619809851998203/
+match = -33.3%%
+title = tìm trẻ lạc d2 NGT Long Biên✌️✌️✌️✌️✌️
+url = https://m.facebook.com/groups/HocSinhHN/posts/1619809158664939/
 
 [vietnamairport.vn]
 match = -93.3%%
