--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-08-10 02:50:07
+lastsearch = 2024-08-10 04:33:15
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -115,4 +115,9 @@ url = https://monre.gov.vn/pages/forms/my-sub.aspx?Paged=TRUE&p__ModerationStatu
 match = -45.0%%
 title = CONG HOA XA HOI CHU NGHIA VItT NAM Do, c 14p
 url = https://vanban.ifee.edu.vn/download/140
+
+[linhkienlammusic.com]
+match = 60.0%%
+title = Chiếu nhựa 0,9m x 1m9
+url = https://linhkienlammusic.com/chieu-nhua-09m-x-1m9
 
