--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-08-10 03:48:40
+lastsearch = 2024-08-10 04:28:47
 
 [everon.online]
 match = 50.0%%
@@ -27,9 +27,9 @@ title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
 url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [vuanem.com]
-match = 14.7%%
-title = Bộ Ga chun chăn chần Everon bốn mùa 4 chi tiết màu ...
-url = https://vuanem.com/bo-ga-chun-chan-chan-everon-EST23034.html?srsltid=AfmBOopoFxNqA72k0pYSbBbo0SjACt5eI1rH8fUeQmV1EqlBxtFfDmEV
+match = 5.9%%
+title = Mua Bộ Ga Chun Chần Chất Lượng - Cao Cấp - Giá Tốt Nhất
+url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan
 
 [everonvn.com.vn]
 match = 32.1%%
