--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-07 00:34:05
 lastsearch = 2024-08-10 04:28:56
 
 [everon.com.vn]
-match = 14.8%%
-title = Bộ Chăn Ga Everon EPM 22063
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
+match = 11.1%%
+title = Bộ Chăn Ga Everon EPM 22070
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22070/
 
 [everon.online]
 match = -44.4%%
@@ -23,8 +23,8 @@ url = https://everonhn.com.vn/bo-chan-ga-everon-epm-22063
 
 [www.everonvn.vn]
 match = -20.0%%
-title = Everon EPM-24063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
+title = Everon EPM-22069 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22069.html
 
 [demxanh.com]
 match = 30.6%%
@@ -43,8 +43,8 @@ url = https://www.everonvni.vn/bo-chan-ga-goi-tra-my-khoe-huong-epm24063/
 
 [everonhanquoc.vn]
 match = 19.4%%
-title = Bộ chăn ga gối Everon EPM-21061
-url = https://everonhanquoc.vn/everon/12742/bo-chan-ga-goi-everon-epm-21061
+title = Bộ Chăn ga gối Everon EPM-21067
+url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
 
 [yeshomebedding.com]
 match = 6.1%%
