--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-18.html
 lastopen = 2024-06-09 23:45:38
 
 [search]
-lastsearch = 2024-08-10 01:38:52
+lastsearch = 2024-08-10 04:28:09
 
 [chieutruc.info]
 match = -73.9%%
@@ -12,14 +12,14 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [www.diepxuan.com]
-match = 17.4%%
-title = Chiếu cây Cao Bằng lụa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html?srsltid=AfmBOoq3xzC7sd-YudtHyOiwXffAY76_m1d46rsLKm8Dl5G7Mihu9XAe
+match = 26.1%%
+title = Chiếu cây Cao Bằng A 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html?srsltid=AfmBOoo1I_Fh32fSckpLjVQOamHLRpqh1L4pTcKr0yHsHPqfDPt6SYxD
 
 [demxanh.com]
 match = -39.1%%
-title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html?srsltid=AfmBOopN3JdFnsY1SO7EkXs5k3iTgAm8iJjGeWuJJPtXFz8_rERomRe-
+title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html?srsltid=AfmBOorrMwCOFkB8coOJNd2NBF1BkWLkZwIn3zVR4BpSvQmp106oIbfC
 
 [shopee.vn]
 match = -78.3%%
