--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-08-10 01:36:45
+lastsearch = 2024-08-10 04:40:53
 
 [shopee.vn]
 match = 17.2%%
@@ -29,7 +29,7 @@ url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 [www.facebook.com]
 match = 26.3%%
 title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/
+url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 
 [www.sendo.vn]
 match = 24.1%%
