--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-10 02:23:44
+lastsearch = 2024-08-10 04:38:47
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -17,9 +17,9 @@ title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [shopee.vn]
-match = 16.1%%
-title = chiếu trúc giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc
+match = -12.9%%
+title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc/1m2
 
 [tiki.vn]
 match = -19.4%%
@@ -29,7 +29,7 @@ url = https://tiki.vn/search?q=chiếu trúc hạt
 [demxanh.com]
 match = -3.2%%
 title = Chuyên cung cấp chiếu trúc hạt các hãng hàng ...
-url = https://demxanh.com/chieu-truc-hat.html
+url = https://demxanh.com/chieu-truc-hat.html?srsltid=AfmBOor7kqmdCGbdV2DezmxKWzRbODE5c8tXJkl2SAscOOoVfLOOAH7b
 
 [www.sendo.vn]
 match = 54.8%%
