--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-08-10 02:27:22
+lastsearch = 2024-08-10 04:37:05
 
 [www.diepxuan.com]
 match = -5.9%%
@@ -17,9 +17,9 @@ title = Ruột gối ép Hàn Quốc Korea , ruot-goi-ep-han-quoc-korea
 url = https://entershopping.vn/ruot-goi-ep-han-quoc-korea.html
 
 [www.detmaykimthanh.com]
-match = 5.9%%
-title = Ruột gối Microfiber Korea Virgin
-url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
+match = 17.6%%
+title = Ruột gối Microfiber deluxe
+url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san.html
 
 [shopee.vn]
 match = 64.7%%
