--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-08-09 22:44:06
+lastsearch = 2024-08-10 05:22:22
 
 [www.tui.co.uk]
 match = -41.7%%
@@ -367,8 +367,8 @@ title = Beldade – Tui - a MICHELIN Guide Restaurant
 url = https://guide.michelin.com/en/galicia/tui/restaurant/beldade
 
 [louisquatorze.com]
-match = -316.7%%
-title = LOUIS QUATORZE | Enjoy and Shop the Classic and Luxury ...
+match = -258.3%%
+title = LOUIS QUATORZE | Enjoy and Shop the Classic and ...
 url = https://louisquatorze.com/
 
 [www.ch-aviation.com]
