--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-10 01:59:03
+lastsearch = 2024-08-10 05:22:01
 
 [tiki.vn]
 match = -138.9%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xanh đậm
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
 
 [foreverbedding.net]
-match = -61.1%%
-title = Bộ ga phủ Common C104 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-common-c104
+match = -144.4%%
+title = FOREVER | Hệ Thống Chăn Ga Gối Đệm Cao Cấp Toàn ...
+url = https://foreverbedding.net/
 
 [aeoneshop.com]
 match = -105.6%%
@@ -72,9 +72,9 @@ title = Bộ Drap phủ ViVaBon SL102 (160x200) - draphoangcuong
 url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-vivabon-sl102-160x200-sp202129.html
 
 [antbedding.com]
-match = 33.3%%
-title = Bộ Chăn Ga Gối Eu04
-url = https://antbedding.com/bo-chan-ga-goi-eu04
+match = -33.3%%
+title = Bộ Chăn Ga Gối Modal Cotton MC13
+url = https://antbedding.com/bo-chan-ga-goi-modal-cotton-mc13
 
 [www.mym.com.vn]
 match = -57.1%%
