--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-08-09 23:30:04
+lastsearch = 2024-08-10 05:28:15
 
 [www.dem365.vn]
 match = -61.9%%
@@ -17,9 +17,9 @@ title = Chăn phao Poly giá rẻ giá 200k, 250k
 url = https://www.demgiare.net/chan-phao-poly-gia-re.html
 
 [shopee.vn]
-match = -66.7%%
-title = Bộ chăn phao - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/bộ chăn phao
+match = -85.7%%
+title = Chân cắm phao ( rẻ vô địch ), chân cắm phao câu đài màu ...
+url = https://shopee.vn/product/61795016/24261490289
 
 [suongtuyet.com]
 match = 28.6%%
@@ -37,9 +37,9 @@ title = Tại sao chặn phao cần 4 hạt chặn? Và trải nghiệm thực t
 url = https://www.youtube.com/watch?v=ZjibqQJbDZY
 
 [www.lazada.vn]
-match = -76.2%%
-title = Chăn Mền Phao Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-men-phao/
+match = -33.3%%
+title = Chăn Phao Siêu Nhẹ Mùa đông Giá Tốt T08/2024
+url = https://www.lazada.vn/tag/chan-phao-sieu-nhe-mua-dong/
 
 [docauquanghuy.com]
 match = -33.3%%
