--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-08-10 00:00:29
+lastsearch = 2024-08-10 05:29:58
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -19,7 +19,7 @@ url = https://dungcuykhoakimminh.com/tag/ion&trang-19
 [mych.vn]
 match = -60.7%%
 title = Khay Đá 14 Ô Làm Đá Viên, Rau Câu, Trữ Đồ Ăn Dặm ... - Mych
-url = https://mych.vn/san-pham/khay-da-14-o-lam-da-vien-rau-cau-tru-do-an-dam-cho-be-co-nap-day.html?srsltid=AfmBOopVW2cTZ83f1lAUP-BaEDMoRWMgS03kfaxYP8z0G2aakly1Lp8K
+url = https://mych.vn/san-pham/khay-da-14-o-lam-da-vien-rau-cau-tru-do-an-dam-cho-be-co-nap-day.html
 
 [xn--chiabngvngloiworldcupkhuvcchu-8nc3a50cm302fybaw6p.nigioivietnam.vn]
 match = -60.7%%
@@ -107,9 +107,9 @@ title = 14 năm Rooney ra mắt MU: Hat-trick huyền thoại, "Quỷ đầu ...
 url = https://www.24h.com.vn/bong-da/14-nam-rooney-ra-mat-mu-hat-trick-huyen-thoai-quy-dau-dan-gam-vang-c48a993554.html
 
 [www.facebook.com]
-match = -17.9%%
-title = CATHAY LIFE TẬP ĐOÀN TÀI CHÍNH SỐ 1 ĐÀI LOAN ...
-url = https://www.facebook.com/groups/tuyendunglanhdao/posts/cathay-life-tập-đoàn-tài-chính-số-1-đài-loan-tuyển-dụng-nhân-sự-cuối-năm-yêu-cầu/1500987144140322/
+match = -25.0%%
+title = HÀNH TRÌNH “PEEL DA” 14 NGÀY BẰNG MANDELIC ...
+url = https://www.facebook.com/trustpluscuanam/photos/a.113295247201464/113295160534806/?type=3
 
 [trongdoitam1.mysapo.net]
 match = 7.1%%
