--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-10 04:42:59
+lastsearch = 2024-08-10 05:23:45
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -12,9 +12,9 @@ title = Chiếu cây Đài Loan 140x190
 url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
-match = -21.4%%
-title = Làm thế nào khi trẻ sơ sinh bị vàng da kéo dài?
-url = https://www.vinmec.com/vie/bai-viet/lam-nao-khi-tre-so-sinh-bi-vang-da-keo-dai-vi
+match = 0.0%%
+title = Chiếu đèn vàng da 15 phút có hiệu quả không?
+url = https://www.vinmec.com/vie/bai-viet/chieu-den-vang-da-15-phut-co-hieu-qua-khong-vi
 
 [www.hotdeal.vn]
 match = -25.0%%
@@ -22,9 +22,9 @@ title = ĐIỀU TRỊ MỤN LƯNG/ THÂM NÁCH/ MÔNG/ BẸN/ LĂN ...
 url = https://www.hotdeal.vn/ho-chi-minh/dieu-tri-mun-tham-nam/dieu-tri-mun-lung-tham-nach-mong-ben-lan-kim-sieu-vi-diem-tri-seo-ro-nam-tan-nhang-phi-kim-tao-bien-cam-ket-hieu-qua-100-mimosa-spa-359573.html
 
 [www.youtube.com]
-match = -60.7%%
-title = Đổi Màu Nội Thất Mercedes GLC Đỏ Đen Da Bò Xịn Italy Hà Nội
-url = https://www.youtube.com/watch?v=6okPdN0a338
+match = -35.7%%
+title = QUỲ LẠY Trước Cô Gái Người Đài Loan Vừa "HÁT CÂU ĐẦU ...
+url = https://www.youtube.com/watch?v=hpMYEpipPao
 
 [m.facebook.com]
 match = 0.0%%
