--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-08-10 03:00:58
+lastsearch = 2024-08-10 05:13:40
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -22,9 +22,9 @@ title = THỦ TỤC LÀM HỘ CHIẾU ĐÀI LOAN VÀ VISA NHẬP CẢN...
 url = https://roc-taiwan.org/vnsgn_en/post/79.html
 
 [shopee.vn]
-match = -57.1%%
-title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
-url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
+match = -42.9%%
+title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
+url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
 
 [www.taiwanembassy.org]
 match = -109.5%%
@@ -37,9 +37,9 @@ title = Tổng hợp quy định nhập cảnh Đài Loan 2024
 url = https://vnpay.vn/quy-dinh-nhap-canh-dai-loan-0pgkjx2c6vit
 
 [taiwandiary.vn]
-match = -52.4%%
-title = Hộ chiếu Đài Loan 2024 quyền lực như thế nào?
-url = https://taiwandiary.vn/2024/06/27/ho-chieu-dai-loan-2024-dung-thu-69/
+match = -100.0%%
+title = Tổng hợp các loại visa tại Đài Loan có thể bạn chưa biết
+url = https://taiwandiary.vn/2024/05/29/tong-hop-cac-loai-visa-tai-dai-loan/
 
 [www.roc-taiwan.org]
 match = -19.0%%
@@ -47,9 +47,9 @@ title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
 url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.facebook.com]
-match = 0.0%%
-title = Raohe Ẩm Thực Đài
-url = https://www.facebook.com/RaoheAmThucDai/
+match = -100.0%%
+title = Trấn Thành - Lịch chiếu MAI ở Đài Loan nha!!! Cả nhà cập...
+url = https://www.facebook.com/tran.thanh.ne/posts/lịch-chiếu-mai-ở-đài-loan-nha-cả-nhà-cập-nhật-để-đi-xem-cho-dễ-ạh-ra-rạp-thôi-đà/1026713498818919/
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
