--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-08-09 22:45:31
+lastsearch = 2024-08-10 05:22:41
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -62,9 +62,9 @@ title = Di tích lịch sử Rạch gầm - Xoài mút
 url = https://svhttdl.tiengiang.gov.vn/di-tich-lich-su/-/asset_publisher/wxIoUS9QiA4e/content/di-tich-lich-su-rach-gam-xoai-mut
 
 [www.youtube.com]
-match = -162.5%%
-title = Mẹo Hay Luộc Đậu Phộng Nhanh Mềm Không Thâm Đen ...
-url = https://www.youtube.com/watch?v=vVLK7BEIS-g
+match = -212.5%%
+title = [ENG SUB] Công thức ướp gà ram nước mắm bất bại siêu tốn ...
+url = https://www.youtube.com/watch?v=Ma1NR23Mj8w
 
 [lienminhhtxhaiphong.org.vn]
 match = -25.0%%
@@ -82,9 +82,9 @@ title = Khăn rối mặt gấu kèm lục lạc, gặm nướu (Xanh dương)
 url = https://concung.com/do-choi-em-be/khan-roi-mat-gau-kem-luc-lac-gam-nuou-xanh-duong-55669.html
 
 [shopee.vn]
-match = -18.8%%
-title = Chiếu lác thiên nhiên : 1m6 .1m8
-url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
+match = -75.0%%
+title = chiếu lác xuất khẩu 1m8 chiếu dầy cao cấp
+url = https://shopee.vn/chiếu-lác-xuất-khẩu-1m8-chiếu-dầy-cao-cấp-i.275355238.7156323941
 
 [www.conggiao.org]
 match = -68.8%%
@@ -217,9 +217,9 @@ title = Khách sạn rẻ gần Redebas, Đức - Nhiều ưu đãi hấp dẫn
 url = https://www.booking.com/city/de/redebas.vi.html
 
 [m.facebook.com]
-match = -193.8%%
-title = Tôi Là Dân Quận 12 | Sáng mai lên xe chiều t6 e trả đơn
-url = https://m.facebook.com/groups/477065866263029/posts/1567764360526502/
+match = -143.8%%
+title = CÂU CHUYỆN “ANTI-FAN” - CLB MỚI CỦA HOÀNG SAO ...
+url = https://m.facebook.com/Vietbilliard/photos/câu-chuyện-anti-fan-clb-mới-của-hoàng-sao-bị-spam-đánh-giá-1-saotrong-thời-gian-/441666522205052/
 
 [antoanthanhpho.vn]
 match = -68.8%%
