--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-08-10 04:24:45
+lastsearch = 2024-08-10 05:23:24
 
 [shopee.vn]
-match = -178.6%%
-title = Màn chụp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/màn chụp
+match = -214.3%%
+title = mùng chụp tự bung cao cấp 18 x 18 m giá tốt Tháng 7, 2024
+url = https://shopee.vn/search?keyword=mùng chụp tự bung cao cấp 18 x 18 m
 
 [mungthienmetta.com]
-match = -171.4%%
-title = {NEW2022} 2M Vuông | Mùng Ngủ METTA Tự Bung - ...
-url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/new2022-2m-vuong-mung-ngu-metta-tu-bung-mngu2m-vuong-vang-bh-18-thang.html
+match = -185.7%%
+title = {NEW2021} Mùng Ngủ METTA Tự Bung Thông Minh - 2 ...
+url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/new2021-mung-ngu-metta-tu-bung-thong-minh-2-met-vuong-mngu2m-vuong-xam-bh-18-thang.html
 
 [tiki.vn]
 match = -221.4%%
